--- a/monsters/caverns/index.html
+++ b/monsters/caverns/index.html
@@ -131,12 +131,12 @@
 	<li>蜂擁而上</li>
 	<li>將某物（或某人）撕成碎片</li>
 </ul>
-<h3 class="MonsterName">鎖喉怪 (Choker)<span class="Tags">單獨, 隱匿, 智能</span></h3>
+<h3 class="MonsterName">鎖喉怪 (Choker)<span class="Tags">單獨, 隱匿, 聰穎</span></h3>
 <p class="MonsterStats">鎖喉 (d10 傷害), 15 HP, 2 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 及遠</span></p>
 <p class="MonsterQualities"><strong>特殊性質:</strong> 柔韌彈性</p>
 <p class="MonsterDescription">
-	有人說這些鬼東西是一名殘忍巫師的家族後裔，他們因為他而被強迫居住在地底。傳說，他可怕的實驗使他變得畏懼陽光，而隨著數個世紀過去，他也拖著他的族裔們一起墮落成了不死之軀。這些怪物在某種程度上與人類相似，有著一顆頭、四肢什麼的，只不過牠們的皮膚濕滑而柔韌，雙臂瘦長，指爪緊攫。正如人們所預料的那樣，牠們憎恨所有沾染著陽光臭味的生物。這長期灌輸的嫉妒，可沒那麼容易甩掉。 <b>本能</b>: 拒絕亮光</p>
+	有人說這些鬼東西是一名殘忍巫師的家族後裔，他們因為他而被迫居住在地底。傳說他可怕的實驗使他變得畏懼陽光，而隨著數個世紀過去，他也拖著他的族裔們一起墮落成了不死之軀。這些怪物在某種程度上與人類相似，有著一顆頭、四肢什麼的，只不過牠們的皮膚濕滑而柔韌，雙臂瘦長，指爪緊攫。正如人們所預料的那樣，牠們憎恨所有沾染著陽光臭味的生物。這長期灌輸的嫉妒，可沒那麼容易甩掉。 <b>本能</b>: 拒絕亮光</p>
 <ul>
 	<li>緊緊擒抱某人，扭絞止住他們的呼吸。</li>
 	<li>拋扔一個被擒抱住的生物</li>
@@ -164,7 +164,7 @@
 <p class="MonsterStats"><span class="Tags">及遠, 擊退</span></p>
 <p class="MonsterQualities"><strong>特殊性質:</strong> 由石頭構成</p>
 <p class="MonsterDescription">
-	我們那兒的薩滿曾說這世界上的一切，石頭、樹木、溪流，都寄宿著靈魂。現在，在我親眼目睹大地在我腳下翻騰，以及那雙岩石巨拳把我的朋友們揍了個半死之後，我才算是信了那個瘋老頭。我看見的那傢伙相當巨大－－就跟房子一樣大！它從沸騰的岩崩洪流中忽然出現，有著如同雪崩的嗓音。現在，我要展現我的敬意。理當如此。 <b>本能</b>: 展現大地的力量</p>
+	我們那兒的薩滿曾說這世界上的一切，石頭、樹木、溪流，都寄宿著靈魂。現在，當我親眼目睹大地在我腳下翻騰，以及那雙岩石巨拳把我的朋友們揍了個半死之後，我才算是信了那個瘋老頭。我看見的那傢伙相當巨大－－就跟房子一樣大！它從沸騰的岩崩洪流中忽然出現，發出如同雪崩的嗓音。現在，我要展現我的敬意。理當如此。 <b>本能</b>: 展現大地的力量</p>
 <ul>
 	<li>將大地變為武器</li>
 	<li>融身入石</li>
@@ -185,7 +185,7 @@
 <p class="MonsterStats"><span class="Tags">近身</span></p>
 <p class="MonsterQualities"><strong>特殊性質:</strong> 飛翼</p>
 <p class="MonsterDescription">
-	這是個傷心的故事，真的。這些由過去的魔法師所孕育而出的石像鬼們已經再也沒有可以守護的城堡。牠們先祖的神聖使命仍流淌在牠們的血中，驅使牠們尋找一處場所－－大多是廢墟，但有時也會是洞窟、山丘、或高山懸崖－－並守護著該處，就彷彿牠們的主人還居住在裏頭一樣。不過，牠們可是出了名地擅長尋找埋藏於地底的貴重財寶。只要你能找到一頭這種帶翼爬蟲動物，你就一定能在附近找到寶藏。不過小心，牠們可不好找，而且往往成群結隊。 <b>本能</b>: 守護</p>
+	這是個傷心的故事，真的。這些在過去由魔法師所孕育而出的石像鬼們已經再也沒有可以看守的城堡。牠們先祖的神聖使命仍流淌在牠們的血中，驅使牠們尋找一處場所－－大多是廢墟，但有時也會是洞窟、山丘、或高山懸崖－－並守護著該處，就彷彿牠們的主人還居住在裏頭一樣。不過，牠們可是出了名地擅長尋找埋藏於地底的貴重財寶。只要你能找到一頭這種帶翼爬蟲動物，你就一定能在附近找到寶藏。不過小心，牠們可不好找，而且往往成群結隊。 <b>本能</b>: 看守</p>
 <ul>
 	<li>以突襲的方式進行攻擊</li>
 	<li>飛向空中</li>
@@ -193,15 +193,15 @@
 </ul>
 <h3 class="MonsterName">凝膠方塊 (Gelatinous Cube)<span class="Tags">單獨, 大型, 隱匿, 不定型</span></h3>
 <p class="MonsterStats">吞沒 (d10+1 傷害, 無視護甲), 20 HP, 1 護甲</p>
-<p class="MonsterStats"><span class="Tags">Hand</span></p>
+<p class="MonsterStats"><span class="Tags">觸及</span></p>
 <p class="MonsterQualities"><strong>特殊性質:</strong> 透明軀體</p>
 <p class="MonsterDescription">
-	有多少冒險者臨死前最後的想法是「怪了，這個走道怎麼好像比大多隧道都還要乾淨」？唉，太多了，而這全都是因為這團透明清澈的可怕威脅。這龐大的酸性團塊會將自身膨脹，填滿一間小房間或走廊後，開始非常緩慢地滑動，吞食所有在它路徑上的事物。它沒有辦法消化石頭或金屬，且經常會讓這些垃圾漂浮在它果凍般的身軀內。嘔。 <b>本能</b>: 清理乾淨</p>
+	有多少冒險者臨死前最後的想法是「怪了，這個走道怎麼好像比大多隧道都還要乾淨」？唉，太多了，而這全都要肇因於這團透明清澈的可怕威脅。這龐大的酸性團塊會將自身膨脹，填滿一間小房間或走廊後，開始非常緩慢地滑動，吞食所有在它路徑上的事物。它沒有辦法消化石頭或金屬，且經常會讓這些垃圾漂浮在它果凍般的身軀內。嘔。 <b>本能</b>: 清理乾淨</p>
 <ul>
 	<li>佔據充滿一個明顯空無一物的空間</li>
 	<li>溶解消化</li>
 </ul>
-<h3 class="MonsterName">哥布林 (Goblin)<span class="Tags">成群, 小型, 智能, 組織</span></h3>
+<h3 class="MonsterName">哥布林 (Goblin)<span class="Tags">成群, 小型, 聰穎, 組織</span></h3>
 <p class="MonsterStats">矛 (d6 傷害), 3 HP, 1 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 及遠</span></p>
 <p class="MonsterDescription">
@@ -211,7 +211,7 @@
 	<li>呼叫更多哥布林</li>
 	<li>撤退，並帶著更多更多的同伴回來</li>
 </ul>
-<h3 class="MonsterName">哥布林奧法師 (Goblin Orkaster)<span class="Tags">單獨, 小型, 魔法, 智能, 組織</span></h3>
+<h3 class="MonsterName">哥布林奧法師 (Goblin Orkaster)<span class="Tags">單獨, 小型, 魔法, 聰穎, 組織</span></h3>
 <p class="MonsterStats">強酸法球 (d10+1 傷害, 無視護甲), 12 HP, 0 護甲</p>
 <p class="MonsterStats"><span class="Tags">短程, 遠程</span></p>
 <p class="MonsterDescription">噢老天，是誰教他們魔法的？ <b>本能</b>: 汲取並發揮超乎他們身型的力量</p>
@@ -220,21 +220,21 @@
 	<li>傾瀉出魔法混沌</li>
 	<li>把其他哥布林當作盾牌</li>
 </ul>
-<h3 class="MonsterName">歌利亞 (Goliath)<span class="Tags">集團, 巨型, 組織, 智能</span></h3>
+<h3 class="MonsterName">歌利亞 (Goliath)<span class="Tags">集團, 巨型, 組織, 聰穎</span></h3>
 <p class="MonsterStats">硬頭鎚 (d8+7 傷害), 14 HP, 1 護甲</p>
 <p class="MonsterStats"><span class="Tags">及遠, 擊退</span></p>
 <p class="MonsterDescription">
-	他們居住在大地之下，因為他們已經不再屬於地表。在遠古的年代，這群不朽的強大泰坦種族從山川平原中逃離，被人類和他們的英雄們驅趕出去。被遺留在黑暗中等待時機，任深幽之下的滾燙岩漿溫暖著他們的憎恨與憤怒。傳說地震就是歌利亞臨盆時的哭喊。而終有一天，他們會奪回屬於他們的一切。 <b>本能</b>: 奪回</p>
+	他們居住在大地之下，因為他們已經不再屬於地表世界。在遠古的年代，這群不朽的強大泰坦種族從山川平原中逃離，被人類和他們的英雄們驅趕出去。被遺留在黑暗中等待時機，任深幽之下的滾燙岩漿溫暖著他們的憎恨與憤怒。傳說地震就是歌利亞誕生時的哭喊。而終有一天，他們會奪回屬於他們的一切。 <b>本能</b>: 奪回</p>
 <ul>
 	<li>震動大地</li>
-	<li>R撤退，並在變得更強之後捲土重來</li>
+	<li>撤退，並在變得更強之後捲土重來</li>
 </ul>
 <h3 class="MonsterName">食腐獸 (Otyugh)<span class="Tags">單獨, 大型</span></h3>
 <p class="MonsterStats">觸手 (d10+3 傷害), 20 HP, 1 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 及遠, 擊退</span></p>
 <p class="MonsterQualities"><strong>特殊性質:</strong> 腐熱症</p>
 <p class="MonsterDescription">
-	食腐獸的求偶叫聲是一陣可怕而響亮的刺耳哭喊，聽起來就像是一頭瀕死大象和過度飢渴的禿鷲雜交時所發出的聲音。食腐獸大部分的時間都會半浸在汙濁的髒水中，且喜好吃食垃圾更勝過其他食物。也因此，牠經常在獸人、哥布林、和其他穴居亞人的內臟雜碎的餵養下長得又肥又壯。然而如果靠得太近，牠其中一條帶刺的觸手就會把你拽進那長滿鋒刃利齒的潮濕大口中。就算你僥倖逃過一劫，最好還是去看個醫生，否則你的勝利可能不會持續太久。 <b>本能</b>: 汙染弄髒</p>
+	食腐獸的求偶叫聲是一陣可怕而響亮的刺耳哭喊，聽起來就彷彿一頭瀕死大象和過度飢渴的禿鷲雜交時所發出的聲音。食腐獸大部分的時間都會半浸在汙濁的髒水中，且喜好吃食垃圾更勝過其他食物。也因此，牠經常在獸人、哥布林、和其他穴居亞人的內臟雜碎的餵養下長得又肥又壯。然而如果靠得太近，牠其中一條帶刺的觸手就會把你拽進那長滿鋒刃利齒的濕潤大口中。就算你僥倖逃過一劫，最好還是去看個醫生，否則你的勝利可能不會持續太久。 <b>本能</b>: 汙染弄髒</p>
 <ul>
 	<li>使某人感染腐熱症</li>
 	<li>拋擲某人或某物</li>
@@ -244,7 +244,7 @@
 <p class="MonsterStats"><span class="Tags">近身</span></p>
 <p class="MonsterQualities"><strong>特殊性質:</strong> 兩棲, 麻痺觸手</p>
 <p class="MonsterDescription">
-	創造出這種生物的神明肯定是對世界上的文明開了個病態的玩笑。活蛆烏賊揮舞著一張長滿蠕動觸手的面孔，且如果牠們碰到了你，那感覺就像是被閃電擊中一樣。牠們會使你麻痺癱瘓，並趁你無能為力的時候緩慢地咀嚼你身上的血肉。最好不要讓事情發展到那個地步。 <b>本能</b>: 進食</p>
+	創造出這種生物的神明肯定是對世界上的文明開了個病態的玩笑。活蛆烏賊甩動著一張長滿蠕動觸手的臉面，如果牠們碰到了你，你將體會到如同被閃電擊中一樣的感覺。牠們會使你麻痺癱瘓，並趁你無能為力的時候緩慢地咀嚼你身上的血肉。最好不要讓事情發展到那個地步。 <b>本能</b>: 進食</p>
 <ul>
 	<li>藉觸碰使目標麻痺</li>
 </ul>
@@ -253,12 +253,12 @@
 <p class="MonsterStats"><span class="Tags">及遠, 擊退</span></p>
 <p class="MonsterQualities"><strong>特殊性質:</strong> 掘地</p>
 <p class="MonsterDescription">
-	咿呀！咿呀！偉大的巨紫蠕蟲！那神聖的黏液是有福的！吾等是如此不配，得以行走在那綿延數里的巨大隧道。吾等不過是祂那吞噬萬物的紫蘭之光所映照的卑微之影。純粹的教徒，吾等冀望那日的降臨，終於回歸祂那利牙圍繞巨嘴的懷抱。讓祂吞噬我們！讓祂啃食我們的家園和村鎮，這樣我們才能被帶祂帶走，咿呀！咿呀！偉大的巨紫蠕蟲！ <b>本能</b>: 吞噬殆盡</p>
+	咿呀！咿呀！偉大的巨紫蠕蟲！那神聖的黏液是有福的！吾等是如此不配，得以行走在那綿延數里的巨大隧道。吾等不過是祂那吞噬萬物的紫蘭之光所映照的卑微之影。純粹的教徒，吾等冀望那日的降臨，終於回歸祂那利牙圍繞巨嘴的懷抱。讓祂吞噬我們！讓祂啃食我們的家園和村鎮，這樣我們才能被祂帶走，咿呀！咿呀！偉大的巨紫蠕蟲！ <b>本能</b>: 吞噬殆盡</p>
 <ul>
 	<li>囫圇吞下</li>
 	<li>在石頭和泥土中掘出隧道</li>
 </ul>
-<h3 class="MonsterName">樹繩妖 (Roper)<span class="Tags">單獨, 大型, 隱匿, 智能</span></h3>
+<h3 class="MonsterName">樹繩妖 (Roper)<span class="Tags">單獨, 大型, 隱匿, 聰穎</span></h3>
 <p class="MonsterStats">啃咬 (d10+1 傷害), 16 HP, 1 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 及遠</span></p>
 <p class="MonsterQualities"><strong>特殊性質:</strong> 岩石般的血肉</p>
@@ -280,7 +280,7 @@
 	<li>產卵</li>
 	<li>從寄生宿主體內破體掘出</li>
 </ul>
-<h3 class="MonsterName">蜘蛛之主 (Spiderlord)<span class="Tags">單獨, 大型, 狡猾, 智能</span></h3>
+<h3 class="MonsterName">蜘蛛之主 (Spiderlord)<span class="Tags">單獨, 大型, 狡猾, 聰穎</span></h3>
 <p class="MonsterStats">下顎 (d8+4 傷害), 16 HP, 3 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 及遠</span></p>
 <p class="MonsterQualities"><strong>特殊性質:</strong> 掘地</p>
@@ -321,13 +321,13 @@
     <script>
       $("#sidemenu-topnav").addClass('currentul');
       $("#sidemenu").prepend("<h3>目錄</h3>");
-      $("h2, h1, .MonsterName").each(function(i) {
+      $("h2, h1, .MonsterName, .SpellName").each(function(i) {
           var current = $(this);
           current.attr("id", "title" + i);
           var tag = current.prop("tagName");
           
           var link_text = current.html();
-          if(current.context.className=="MonsterName"){
+          if(current.context.className=="MonsterName" || current.context.className=="SpellName"){
             link_text = link_text.replace(/\<span class=\"Tags\"\>.*\<\/span\>/g, "");
           }
 
@@ -345,8 +345,30 @@
       $(".Tags").each(function(i) {
         var current = $(this);
         var tags_arr = current.html().split(", ");
-        current.html(tags_arr.map(tag=>"<tag>"+tag+"</tag>").join(""));
+        current.html(tags_arr.map(function(tag){
+            var className = "";
+            tag = tag.trim();
+            console.log(tag);
+            if(isRangeTag(tag))         className = "red";
+            if(isSizeTag(tag))          className = "green";
+            if(isOrganizationTag(tag))  className = "blue";
+            if(isSpellLevelTag(tag))    className = "purple";
+            return `<tag class="${className}">${tag}</tag>`;
+          }).join(""));
       });
+
+      function isSpellLevelTag(tag){
+        return (tag.match(/等級 \d+|禱念|戲法|Level \d+|Rote|Cantrip/))? true: false;
+      }
+      function isRangeTag(tag){
+        return (tag.match(/觸及|近身|及遠|短程|遠程|Hand|Close|Reach|Near|Far/))? true: false;
+      }
+      function isSizeTag(tag){
+        return (tag.match(/微型|小型|大型|巨型|Tiny|Small|Large|Huge/))? true: false;
+      }
+      function isOrganizationTag(tag){
+        return (tag.match(/成群|集團|單獨|Horde|Group|Solitary/))? true: false;
+      }
     </script>
   </body>
 </html>
