--- a/monsters/woods/index.html
+++ b/monsters/woods/index.html
@@ -111,14 +111,14 @@
           <div class="col-md-8 col-md-offset-1">
              
 <h1>Dark Woods</h1>
-<h3 class="MonsterName">Assassin Vine	<span class="Tags">Solitary, Stealthy, Amorphous</span></h3>
+<h3 class="MonsterName">殺手藤 (Assassin Vine)<span class="Tags">Solitary, Stealthy, Amorphous</span></h3>
 <p class="MonsterStats">Thorns (d10 damage, 1 piercing), 15 HP, 1 Armor</p>
 <p class="MonsterStats"><span class="Tags">Close, Reach, Messy</span></p>
 <p class="MonsterQualities"><strong>Special Qualities:</strong> Plant</p>
 <p class="MonsterDescription">Among the animals there exists a clear division ‘tween hunter and hunted. All it takes is a glance to know—by fangs and glowing eyes or claws or venomous sting—which of the creatures of this world are meant to kill and which stand to be killed. Such a split, if you have the eyes to see it, cuts the world of leaves and flowers in twain, as well. Druids in their forest circles know it. Rangers, too, might spot such a plant before it’s too late. Lay folk, though, they wander where they oughtn’t—paths into the deep woods covered in creeping vines and with a snap, these hungry ropes snap tight, dragging their meaty prey into the underbrush. Mind your feet, traveller. <em>Instinct</em>: To grow</p>
 <ul><li>Shoot forth new growth</li>
 <li>Attack the unwary</li></ul>
-<h3 class="MonsterName">Blink Dog	<span class="Tags">Group, Small, Magical, Organized</span></h3>
+<h3 class="MonsterName">閃現犬 (Blink Dog)<span class="Tags">Group, Small, Magical, Organized</span></h3>
 <p class="MonsterStats">Bite (d8 damage), 6 HP, 4 Armor</p>
 <p class="MonsterStats"><span class="Tags">Close</span></p>
 <p class="MonsterQualities"><strong>Special Qualities:</strong> Illusion</p>
@@ -126,7 +126,7 @@
 <ul><li>Give the appearance of being somewhere they’re not</li>
 <li>Summon the pack</li>
 <li>Move with amazing speed</li></ul>
-<h3 class="MonsterName">Centaur	<span class="Tags">Horde, Large, Organized, Intelligent</span></h3>
+<h3 class="MonsterName">半人馬 (Centaur)<span class="Tags">Horde, Large, Organized, Intelligent</span></h3>
 <p class="MonsterStats">Bow (d6+2 damage, 1 piercing), 11 HP, 1 Armor</p>
 <p class="MonsterStats"><span class="Tags">Close, Reach, Near</span></p>
 <p class="MonsterQualities"><strong>Special Qualities:</strong> Half-horse, Half-man</p>
@@ -141,13 +141,13 @@
 <p class="MonsterDescription">The barrier between Dungeon World and the elemental planes is not, as you might hope, a wall of stone. It’s much more porous. Places where the civil races do not often tread can sometimes, how to put this, spring a leak. Like a dam come just a little loose. Bits and pieces of the chaos spill out. Sometimes, they’ll congeal like an egg on a pan—that’s where we get the material for many of the Guild’s magical trinkets. Useful, right? Sometimes, though, it squirms and squishes around a bit and stays that way, warping all it touches into some other, strange form. Chaos begets chaos, and it grows. <em>Instinct</em>: To change</p>
 <ul><li>Cause a change in appearance or substance</li>
 <li>Briefly bridge the planes</li></ul>
-<h3 class="MonsterName">Cockatrice	<span class="Tags">Group, Small, Hoarder</span></h3>
+<h3 class="MonsterName">雞蛇 (Cockatrice)<span class="Tags">Group, Small, Hoarder</span></h3>
 <p class="MonsterStats">Beak (d8 damage), 6 HP, 1 Armor</p>
 <p class="MonsterStats"><span class="Tags">Close</span></p>
 <p class="MonsterQualities"><strong>Special Qualities:</strong> Stone touch</p>
 <p class="MonsterDescription">“I ain’t ever seen such a thing, sir. Rodrick thought it a chicken, maybe. Poor Rodrick. I figured it to be a lizard of a sort, though he was right—it had a beak and gray feathers like a chicken. Right, well, see, we found it in the woods, in a nest at the foot of a tree while we were out with the sow. Looking for mushrooms, sir. I told Rodrick we were—yes, sir, right sir, the bird—see, it was glaring at Rodrick and he tried to scare it off with a stick to steal the eggs but the thing pecked his hand. Quick it was, too. I tried to get him away but he just got slower and slower and…yes, as you see him now, sir. All frozen up like when we left the dog out overnight in winter two years back. Poor, stupid Rodrick. Weren’t no bird nor lizard, were it, sir?”<em>Instinct</em>: To defend the nest</p>
 <ul><li>Start a slow transformation to stone</li></ul>
-<h3 class="MonsterName">Dryad	<span class="Tags">Solitary, Magical, Intelligent, Devious, </span></h3>
+<h3 class="MonsterName">樹精 (Dryad)<span class="Tags">Solitary, Magical, Intelligent, Devious, </span></h3>
 <p class="MonsterStats">Crushing vines (w[2d8]damage), 12 HP, 2 Armor</p>
 <p class="MonsterStats"><span class="Tags">Close</span></p>
 <p class="MonsterQualities"><strong>Special Qualities:</strong> Plant</p>
@@ -155,7 +155,7 @@
 <ul><li>Entice a mortal</li>
 <li>Merge into a tree</li>
 <li>Turn nature against them</li></ul>
-<h3 class="MonsterName">Eagle Lord	<span class="Tags">Group, Large, Organized, Intelligent</span></h3>
+<h3 class="MonsterName">鷹王 (Eagle Lord)<span class="Tags">Group, Large, Organized, Intelligent</span></h3>
 <p class="MonsterStats">Talons (b[2d8]+1 damage, 1 piercing), 10 HP, 1 Armor</p>
 <p class="MonsterStats"><span class="Tags">Close, Reach</span></p>
 <p class="MonsterQualities"><strong>Special Qualities:</strong> Mighty wings</p>
@@ -163,7 +163,7 @@
 <ul><li>Attack from the sky</li>
 <li>Pull someone into the air</li>
 <li>Call on ancient oaths</li></ul>
-<h3 class="MonsterName">Elvish Warrior	<span class="Tags">Horde, Intelligent, Organized</span></h3>
+<h3 class="MonsterName">精靈戰士 (Elvish Warrior)<span class="Tags">Horde, Intelligent, Organized</span></h3>
 <p class="MonsterStats">Sword (b[2d6] damage), 3 HP, 2 Armor</p>
 <p class="MonsterStats"><span class="Tags">Close</span></p>
 <p class="MonsterQualities"><strong>Special Qualities:</strong> Sharp sense</p>
@@ -273,13 +273,13 @@
     <script>
       $("#sidemenu-topnav").addClass('currentul');
       $("#sidemenu").prepend("<h3>目錄</h3>");
-      $("h2, h1, .MonsterName").each(function(i) {
+      $("h2, h1, .MonsterName, .SpellName").each(function(i) {
           var current = $(this);
           current.attr("id", "title" + i);
           var tag = current.prop("tagName");
           
           var link_text = current.html();
-          if(current.context.className=="MonsterName"){
+          if(current.context.className=="MonsterName" || current.context.className=="SpellName"){
             link_text = link_text.replace(/\<span class=\"Tags\"\>.*\<\/span\>/g, "");
           }
 
@@ -297,8 +297,30 @@
       $(".Tags").each(function(i) {
         var current = $(this);
         var tags_arr = current.html().split(", ");
-        current.html(tags_arr.map(tag=>"<tag>"+tag+"</tag>").join(""));
+        current.html(tags_arr.map(function(tag){
+            var className = "";
+            tag = tag.trim();
+            console.log(tag);
+            if(isRangeTag(tag))         className = "red";
+            if(isSizeTag(tag))          className = "green";
+            if(isOrganizationTag(tag))  className = "blue";
+            if(isSpellLevelTag(tag))    className = "purple";
+            return `<tag class="${className}">${tag}</tag>`;
+          }).join(""));
       });
+
+      function isSpellLevelTag(tag){
+        return (tag.match(/等級 \d+|禱念|戲法|Level \d+|Rote|Cantrip/))? true: false;
+      }
+      function isRangeTag(tag){
+        return (tag.match(/觸及|近身|及遠|短程|遠程|Hand|Close|Reach|Near|Far/))? true: false;
+      }
+      function isSizeTag(tag){
+        return (tag.match(/微型|小型|大型|巨型|Tiny|Small|Large|Huge/))? true: false;
+      }
+      function isOrganizationTag(tag){
+        return (tag.match(/成群|集團|單獨|Horde|Group|Solitary/))? true: false;
+      }
     </script>
   </body>
 </html>
