--- a/classes/fighter/index.html
+++ b/classes/fighter/index.html
@@ -117,40 +117,43 @@
 <p>你這麼做是為了膽識與榮耀，是為了戰鬥的呼嘯、以及那熾熱的鮮血。你是鐵打的猛獸。你的朋友或許帶著鋼鑄的鋒刃，然而，戰士，你本身就是鋼鐵。當你的旅伴在荒野營火旁抱怨著他們的傷口，你則驕傲的背起自己的傷疤。</p>
 <p>你即是銅牆鐵壁－－任憑所有撲向你的危險灰飛煙滅。最終，你會是站到最後的那一個。</p></div>
 <hr/>
-<h2>Names</h2>
+<h2>名稱 (Names)</h2>
 <div id="names"><p  class="NoIndent"><em>Dwarf</em>: Ozruk, Surtur, Brunhilda, Annika, Janos, Greta, Dim, Rundrig, Jarl, Xotoq</p>  
 <p class="NoIndent"><em>Elf</em>: Elohiir, Sharaseth, Hasrith, Shevaral, Cadeus, Eldar, Kithracet, Thelian</p>    
 <p class="NoIndent"><em>Halfling</em>: Finnegan, Olive, Randolph, Bartleby, Aubrey, Baldwin, Becca</p> 
 <p class="NoIndent"><em>Human</em>: Hawke, Rudiger, Gregor, Brianne, Walton, Castor, Shanna, Ajax, Hob</p></div>
-<h2>Look</h2>
-<div id="look"><p class="NoIndent">Choose one for each:</p>
+<hr/>
+<h2>外觀 (Look)</h2>
+<div id="look"><p class="InstructionsAfterHeader">從每列中各自選擇一項：</p>
 <p class="NoIndent">Hard Eyes, Dead Eyes, or Eager Eyes</p>
 <p class="NoIndent">Wild Hair, Shorn Hair, or Battered Helm</p>
 <p class="NoIndent">Calloused Skin, Tanned Skin, or Scarred Skin</p>
 <p class="NoIndent">Built Body, Lithe Body, or Ravaged Body</p></div>
-<h2>Stats</h2>
+<hr/>
+<h2>屬性數值 (Stats)</h2>
 <p class="NoIndent">Your maximum HP is 10+Constitution.</p>
 <p class="NoIndent">Your base damage is <span id="Damage">d10</span>.</p>
-<h2>Starting Moves</h2>
+<hr/>
+<h2>起始動作 (Starting Moves)</h2>
 <div id="startingmoves"><p class="InstructionsAfterHeader">Choose a race and gain the corresponding move:</p>
-<div id="racialmoves"><h3 class="MoveName">Dwarf</h3>
-<p class="NoIndent">When you <strong>share a drink with someone</strong>, you may parley with them using CON instead of CHA.</p>
-<h3 class="MoveName">Elf</h3>
-<p class="NoIndent">Choose one weapon—you can always treat weapons of that type as if they had the precise tag.</p>
-<h3 class="MoveName">Halfling</h3>
-<p class="NoIndent">When you defy danger and <strong>use your small size to your advantage</strong>, take +1.</p>
-<h3 class="MoveName">Human</h3>
-<p class="NoIndent">Once per battle you may reroll a single damage roll (yours or someone else’s).</p></div>
+<div id="racialmoves"><div class="Move"><h3 class="MoveName">Dwarf</h3>
+<p class="NoIndent">When you <strong>share a drink with someone</strong>, you may parley with them using CON instead of CHA.</p></div>
+<div class="Move"><h3 class="MoveName">Elf</h3>
+<p class="NoIndent">Choose one weapon—you can always treat weapons of that type as if they had the precise tag.</p></div>
+<div class="Move"><h3 class="MoveName">Halfling</h3>
+<p class="NoIndent">When you defy danger and <strong>use your small size to your advantage</strong>, take +1.</p></div>
+<div class="Move"><h3 class="MoveName">Human</h3>
+<p class="NoIndent">Once per battle you may reroll a single damage roll (yours or someone else’s).</p></div></div>
 <div id="classmoves"><p class="Instructions">You start with these moves:</p>
-<h3 class="BasicMoveName">Bend Bars, Lift Gates</h3>
+<div class="Move"><h3 class="BasicMoveName">Bend Bars, Lift Gates</h3>
 <p class="NoIndent">When you <strong>use pure strength to destroy an inanimate obstacle</strong>, roll+Str. ✴On a 10+, choose 3. ✴On a 7-9 choose 2.</p>
 <ul><li>It doesn’t take a very long time</li>
 <li>Nothing of value is damaged</li>
 <li>It doesn’t make an inordinate amount of noise</li>
-<li>You can fix the thing again without a lot of effort</li></ul>
-<h3 class="BasicMoveName">Armored</h3>
-<p class="NoIndent">You ignore the clumsy tag on armor you wear.</p>
-<h3 class="BasicMoveName">Signature Weapon</h3>
+<li>You can fix the thing again without a lot of effort</li></ul></div>
+<div class="Move"><h3 class="BasicMoveName">Armored</h3>
+<p class="NoIndent">You ignore the clumsy tag on armor you wear.</p></div>
+<div class="Move"><h3 class="BasicMoveName">Signature Weapon</h3>
 <p class="NoIndent">This is your weapon. There are many like it, but this one is yours. Your weapon is your best friend. It is your life. You master it as you master your life. Your weapon, without you, is useless. Without your weapon, you are useless. You must wield your weapon true.</p>
 <p>Choose a base description, all are 2 weight:</p>
 <ul><li class="Option">Sword</li>
@@ -177,16 +180,18 @@
 <li class="Option">Unblemished</li>
 <li class="Option">Ornate</li>
 <li class="Option">Blood-stained</li>
-<li class="Option">Sinister</li></ul></div></div>
-<h2>Alignment</h2>
+<li class="Option">Sinister</li></ul></div></div></div>
+<hr/>
+<h2>陣營 (Alignment)</h2>
 <p class="InstructionsAfterHeader">Choose an alignment:</p>
-<div id="alignment"><h3 class="MoveName">Good</h3>
-<p class="NoIndent">Defend those weaker than you.</p>
-<h3 class="MoveName">Neutral</h3>
-<p class="NoIndent">Defeat a worthy opponent.</p>
-<h3 class="MoveName">Evil</h3>
-<p class="NoIndent">Kill a defenseless or surrendered enemy.</p></div>
-<h2>Gear</h2>
+<div id="alignment"><div class="Move"><h3 class="MoveName">Good</h3>
+<p class="NoIndent">Defend those weaker than you.</p></div>
+<div class="Move"><h3 class="MoveName">Neutral</h3>
+<p class="NoIndent">Defeat a worthy opponent.</p></div>
+<div class="Move"><h3 class="MoveName">Evil</h3>
+<p class="NoIndent">Kill a defenseless or surrendered enemy.</p></div></div>
+<hr/>
+<h2>裝備 (Gear)</h2>
 <div id="gear"><p class="NoIndent">Your load is 12+Str. You carry your signature weapon and dungeon rations (5 uses, 1 weight). Choose your defenses:</p>
 <ul><li class="Option">Chainmail (1 armor, 1 weight) and adventuring gear (1 weight)</li>
 <li class="Option">Scale armor (2 armor, 3 weight)</li></ul>
@@ -195,59 +200,61 @@
 <li class="Option">Shield (+1 armor, 2 weight)</li>
 <li class="Option">Antitoxin (0 weight), dungeon rations (1 weight), and poultices and herbs (1 weight)</li>
 <li class="Option">22 coins</li></ul></div>
-<h2>Bonds</h2>
+<hr/>
+<h2>羈絆 (Bonds)</h2>
 <div id="bonds"><p class="NoIndent">Fill in the name of one of your companions in at least one:</p>
 <p>_______________ owes me their life, whether they admit it or not.</p>
 <p>I have sworn to protect _______________.</p>
 <p>I worry about the ability of _______________ to survive in the dungeon.</p>
 <p>_______________ is soft, but I will make them hard like me.</p></div>
-<h2>Advanced Moves</h2>
+<hr/>
+<h2>進階動作 (Advanced Moves)</h2>
 <div id="moves"><p class="InstructionsAfterHeader">When you gain a level from 2-5, choose from these moves.</p>
-<h3 class="MoveName">Merciless</h3>
-<p class="NoIndent">When you deal damage, deal +1d4 damage.</p>
-<h3 class="MoveName">Heirloom</h3>
-<p class="NoIndent">When you <strong>consult the spirits that reside within your signature weapon</strong>, they will give you an insight relating to the current situation, and might ask you some questions in return, roll+CHA. ✴On a 10+, the GM will give you good detail. ✴On a 7-9, the GM will give you an impression.</p>
-<h3 class="MoveName">Armor Mastery</h3>
-<p class="NoIndent">When you <strong>make your armor take the brunt of damage dealt to you</strong>, the damage is negated but you must reduce the armor value of your armor or shield (your choice) by 1. The value is reduced each time you make this choice. If the reduction leaves the item with 0 armor it is destroyed.</p>
-<h3 class="MoveName">Improved Weapon</h3>
-<p class="NoIndent">Choose one extra enhancement for your signature weapon.</p>
-<h3 class="MoveName">Seeing Red</h3>
-<p class="NoIndent">When you discern realities during combat, you take +1.</p>
-<h3 class="MoveName">Interrogator</h3>
-<p class="NoIndent">When you <strong>parley using threats of impending violence as leverage</strong>, you may use STR instead of CHA.</p>
-<h3 class="MoveName">Scent of Blood</h3>
-<p class="NoIndent">When you hack and slash an enemy, your next attack against that same foe deals +1d4 damage.</p>
-<h3 class="MoveName">Multiclass Dabbler</h3>
-<p class="NoIndent">Get one move from another class. Treat your level as one lower for choosing the move.</p>
-<h3 class="MoveName">Iron Hide</h3>
-<p class="NoIndent">You gain +1 armor.</p>
-<h3 class="MoveName">Blacksmith</h3>
-<p class="NoIndent">When you have access to a forge you can graft the magical powers of a weapon onto your signature weapon. This process destroys the magical weapon. Your signature weapon gains the magical powers of the destroyed weapon.</p>
+<div class="Move"><h3 class="MoveName">Merciless</h3>
+<p class="NoIndent">When you deal damage, deal +1d4 damage.</p></div>
+<div class="Move"><h3 class="MoveName">Heirloom</h3>
+<p class="NoIndent">When you <strong>consult the spirits that reside within your signature weapon</strong>, they will give you an insight relating to the current situation, and might ask you some questions in return, roll+CHA. ✴On a 10+, the GM will give you good detail. ✴On a 7-9, the GM will give you an impression.</p></div>
+<div class="Move"><h3 class="MoveName">Armor Mastery</h3>
+<p class="NoIndent">When you <strong>make your armor take the brunt of damage dealt to you</strong>, the damage is negated but you must reduce the armor value of your armor or shield (your choice) by 1. The value is reduced each time you make this choice. If the reduction leaves the item with 0 armor it is destroyed.</p></div>
+<div class="Move"><h3 class="MoveName">Improved Weapon</h3>
+<p class="NoIndent">Choose one extra enhancement for your signature weapon.</p></div>
+<div class="Move"><h3 class="MoveName">Seeing Red</h3>
+<p class="NoIndent">When you discern realities during combat, you take +1.</p></div>
+<div class="Move"><h3 class="MoveName">Interrogator</h3>
+<p class="NoIndent">When you <strong>parley using threats of impending violence as leverage</strong>, you may use STR instead of CHA.</p></div>
+<div class="Move"><h3 class="MoveName">Scent of Blood</h3>
+<p class="NoIndent">When you hack and slash an enemy, your next attack against that same foe deals +1d4 damage.</p></div>
+<div class="Move"><h3 class="MoveName">Multiclass Dabbler</h3>
+<p class="NoIndent">Get one move from another class. Treat your level as one lower for choosing the move.</p></div>
+<div class="Move"><h3 class="MoveName">Iron Hide</h3>
+<p class="NoIndent">You gain +1 armor.</p></div>
+<div class="Move"><h3 class="MoveName">Blacksmith</h3>
+<p class="NoIndent">When you have access to a forge you can graft the magical powers of a weapon onto your signature weapon. This process destroys the magical weapon. Your signature weapon gains the magical powers of the destroyed weapon.</p></div>
 <p class="Instructions">When you gain a level from 6-10, choose from these moves or the level 2-5 moves.</p>
-<h3 class="MoveName">Bloodthirsty</h3>
+<div class="Move"><h3 class="MoveName">Bloodthirsty</h3>
 <p class="Requirement">Replaces: Merciless</p>
-<p class="NoIndent">When you deal damage, deal +1d8 damage.</p>
-<h3 class="MoveName">Armored Perfection</h3>
+<p class="NoIndent">When you deal damage, deal +1d8 damage.</p></div>
+<div class="Move"><h3 class="MoveName">Armored Perfection</h3>
 <p class="Requirement">Replaces: Armor Mastery</p>
-<p class="NoIndent">When you <strong>choose to let your armor take the brunt of damage dealt to you</strong>, the damage is negated and you take +1 forward against the attacker, but you must reduce the armor value of your armor or shield (your choice) by 1. The value is reduced each time you make this choice. If the reduction leaves the item with 0 armor it is destroyed.</p>
-<h3 class="MoveName">Evil Eye</h3>
+<p class="NoIndent">When you <strong>choose to let your armor take the brunt of damage dealt to you</strong>, the damage is negated and you take +1 forward against the attacker, but you must reduce the armor value of your armor or shield (your choice) by 1. The value is reduced each time you make this choice. If the reduction leaves the item with 0 armor it is destroyed.</p></div>
+<div class="Move"><h3 class="MoveName">Evil Eye</h3>
 <p class="Requirement">Requires: Seeing Red</p>
-<p class="NoIndent">When you <strong>enter combat</strong>, roll+CHA. ✴On a 10+, hold 2. ✴On a 7-9, hold 1. Spend your hold to make eye contact with an NPC present, who freezes or flinches and can’t act until you break it off. ✴On a 6-, your enemies immediately identify you as their biggest threat.</p>
-<h3 class="MoveName">Taste of Blood</h3>
+<p class="NoIndent">When you <strong>enter combat</strong>, roll+CHA. ✴On a 10+, hold 2. ✴On a 7-9, hold 1. Spend your hold to make eye contact with an NPC present, who freezes or flinches and can’t act until you break it off. ✴On a 6-, your enemies immediately identify you as their biggest threat.</p></div>
+<div class="Move"><h3 class="MoveName">Taste of Blood</h3>
 <p class="Requirement">Replaces: Scent of Blood</p>
-<p class="NoIndent">When you hack and slash an enemy, your next attack against that same foe deals +1d8 damage.</p>
-<h3 class="MoveName">Multiclass Initiate</h3>
+<p class="NoIndent">When you hack and slash an enemy, your next attack against that same foe deals +1d8 damage.</p></div>
+<div class="Move"><h3 class="MoveName">Multiclass Initiate</h3>
 <p class="Requirement">Requires: Multiclass Dabbler</p>
-<p class="NoIndent">Get one move from another class. Treat your level as one lower for choosing the move.</p>
-<h3 class="MoveName">Steel Hide</h3>
+<p class="NoIndent">Get one move from another class. Treat your level as one lower for choosing the move.</p></div>
+<div class="Move"><h3 class="MoveName">Steel Hide</h3>
 <p class="Requirement">Replaces: Iron Hide</p>
-<p class="NoIndent">You gain +2 armor.</p>
-<h3 class="MoveName">Through Death’s Eyes</h3>
-<p class="NoIndent">When you <strong>go into battle</strong>, roll+WIS. ✴On a 10+, name someone who will live <strong>and</strong> someone who will die. ✴On a 7-9, name someone who will live <strong>or</strong> someone who will die. Name NPCs, not player characters. The GM will make your vision come true, if it’s even remotely possible. ✴On a 6- you see your own death and consequently take -1 ongoing throughout the battle.</p>
-<h3 class="MoveName">Eye for Weaponry</h3>
-<p class="NoIndent">When you look over an enemy’s weaponry, ask the GM how much damage they do.</p>
-<h3 class="MoveName">Superior Warrior</h3>
-<p class="NoIndent">When you hack and slash on a 12+ you deal your damage, avoid their attack, and impress, dismay, or frighten your enemy.</p></div>
+<p class="NoIndent">You gain +2 armor.</p></div>
+<div class="Move"><h3 class="MoveName">Through Death’s Eyes</h3>
+<p class="NoIndent">When you <strong>go into battle</strong>, roll+WIS. ✴On a 10+, name someone who will live <strong>and</strong> someone who will die. ✴On a 7-9, name someone who will live <strong>or</strong> someone who will die. Name NPCs, not player characters. The GM will make your vision come true, if it’s even remotely possible. ✴On a 6- you see your own death and consequently take -1 ongoing throughout the battle.</p></div>
+<div class="Move"><h3 class="MoveName">Eye for Weaponry</h3>
+<p class="NoIndent">When you look over an enemy’s weaponry, ask the GM how much damage they do.</p></div>
+<div class="Move"><h3 class="MoveName">Superior Warrior</h3>
+<p class="NoIndent">When you hack and slash on a 12+ you deal your damage, avoid their attack, and impress, dismay, or frighten your enemy.</p></div></div>
 
           </div>
        </div>
@@ -270,13 +277,13 @@
     <script>
       $("#sidemenu-topnav").addClass('currentul');
       $("#sidemenu").prepend("<h3>目錄</h3>");
-      $("h2, h1, .MonsterName").each(function(i) {
+      $("h2, h1, .MonsterName, .SpellName").each(function(i) {
           var current = $(this);
           current.attr("id", "title" + i);
           var tag = current.prop("tagName");
           
           var link_text = current.html();
-          if(current.context.className=="MonsterName"){
+          if(current.context.className=="MonsterName" || current.context.className=="SpellName"){
             link_text = link_text.replace(/\<span class=\"Tags\"\>.*\<\/span\>/g, "");
           }
 
@@ -294,8 +301,30 @@
       $(".Tags").each(function(i) {
         var current = $(this);
         var tags_arr = current.html().split(", ");
-        current.html(tags_arr.map(tag=>"<tag>"+tag+"</tag>").join(""));
+        current.html(tags_arr.map(function(tag){
+            var className = "";
+            tag = tag.trim();
+            console.log(tag);
+            if(isRangeTag(tag))         className = "red";
+            if(isSizeTag(tag))          className = "green";
+            if(isOrganizationTag(tag))  className = "blue";
+            if(isSpellLevelTag(tag))    className = "purple";
+            return `<tag class="${className}">${tag}</tag>`;
+          }).join(""));
       });
+
+      function isSpellLevelTag(tag){
+        return (tag.match(/等級 \d+|禱念|戲法|Level \d+|Rote|Cantrip/))? true: false;
+      }
+      function isRangeTag(tag){
+        return (tag.match(/觸及|近身|及遠|短程|遠程|Hand|Close|Reach|Near|Far/))? true: false;
+      }
+      function isSizeTag(tag){
+        return (tag.match(/微型|小型|大型|巨型|Tiny|Small|Large|Huge/))? true: false;
+      }
+      function isOrganizationTag(tag){
+        return (tag.match(/成群|集團|單獨|Horde|Group|Solitary/))? true: false;
+      }
     </script>
   </body>
 </html>
