--- a/classes/paladin/index.html
+++ b/classes/paladin/index.html
@@ -117,33 +117,36 @@
 <p>所以引導這些愚者吧，聖武士。擔負起你的聖潔使命，將救贖帶到這個破爛世界。</p> 
 <p>敗者毋怨悽慘，對吧？</p></div>
 <hr/>
-<h2>Names</h2>
+<h2>名稱 (Names)</h2>
 <div id="names"><p class="NoIndent">Thaddeus, Augustine, Lux, Cassius, Hadrian, Lucia, Octavia, Regulus, Valeria, Sanguinus, Titanius</p></div>
-<h2>Look</h2>
-<div id="look"><p class="NoIndent">Choose one for each:</p>
+<hr/>
+<h2>外觀 (Look)</h2>
+<div id="look"><p class="InstructionsAfterHeader">從每列中各自選擇一項：</p>
 <p class="NoIndent">Kind Eyes, Fiery Eyes, or Glowing Eyes</p>
 <p class="NoIndent">Helmet, Styled Hair, or Bald</p>
 <p class="NoIndent">Worn Holy Symbol or Fancy Holy Symbol</p>
 <p class="NoIndent">Fit Body, Bulky Body, or Thin Body</p></div>
-<h2>Stats</h2>
+<hr/>
+<h2>屬性數值 (Stats)</h2>
 <p class="NoIndent">Your maximum HP is 10+Constitution.</p>
 <p class="NoIndent">Your base damage is <span id="Damage">d10</span>.</p>
-<h2>Starting Moves</h2>
-<div id="startingmoves"><div id="racialmoves"><p class="InstructionsAfterHeader">You are human, so you get this move.</p>
-<h3 class="MoveName">Human</h3>
-<p class="NoIndent">When you <strong>pray for guidance, even for a moment, and ask, “What here is evil?”</strong> the GM will tell you, honestly.</p></div>
+<hr/>
+<h2>起始動作 (Starting Moves)</h2>
+<div id="startingmoves"><p class="InstructionsAfterHeader">You are human, so you get this move.</p>
+<div id="racialmoves"><div class="Move"><h3 class="MoveName">Human</h3>
+<p class="NoIndent">When you <strong>pray for guidance, even for a moment, and ask, “What here is evil?”</strong> the GM will tell you, honestly.</p></div></div>
 <div id="classmoves"><p class="Instructions">You start with these moves:</p>
-<h3 class="BasicMoveName">Lay on Hands (Cha)</h3>
-<p class="NoIndent">When you <strong>touch someone, skin to skin, and pray for their well-being </strong>, roll+CHA. ✴On a 10+ you heal 1d8 damage or remove one disease. ✴On a 7–9, they are healed, but the damage or disease is transferred to you.</p>
-<h3 class="BasicMoveName">Armored</h3>
-<p class="NoIndent">You ignore the clumsy tag on armor you wear.</p>
-<h3 class="BasicMoveName">I Am the Law</h3>
+<div class="Move"><h3 class="BasicMoveName">Lay on Hands (Cha)</h3>
+<p class="NoIndent">When you <strong>touch someone, skin to skin, and pray for their well-being </strong>, roll+CHA. ✴On a 10+ you heal 1d8 damage or remove one disease. ✴On a 7–9, they are healed, but the damage or disease is transferred to you.</p></div>
+<div class="Move"><h3 class="BasicMoveName">Armored</h3>
+<p class="NoIndent">You ignore the clumsy tag on armor you wear.</p></div>
+<div class="Move"><h3 class="BasicMoveName">I Am the Law</h3>
 <p class="NoIndent">When you <strong>give an NPC an order based on your divine authority</strong>, roll+Cha. ✴On a 7+, they choose one:</p>
 <ul><li>Do what you say</li>
 <li>Back away cautiously, then flee</li>
 <li>Attack you</li></ul>
-<p class="NoIndent">✴On a 10+, you also take +1 forward against them. ✴On a miss, they do as they please and you take -1 forward against them.</p>
-<h3 class="BasicMoveName">Quest</h3>
+<p class="NoIndent">✴On a 10+, you also take +1 forward against them. ✴On a miss, they do as they please and you take -1 forward against them.</p></div>
+<div class="Move"><h3 class="BasicMoveName">Quest</h3>
 <p class="NoIndent">When you <strong>dedicate yourself to a mission through prayer and ritual cleansing</strong>, state what you set out to do:</p>
 <ul><li>Slay _______, a great blight on the land</li>
 <li>Defend _______ from the iniquities that beset them</li>
@@ -161,77 +164,81 @@
 <li>Piety (required: observance of daily holy services)</li>
 <li>Valor (forbidden: suffering an evil creature to live)</li>
 <li>Truth (forbidden: lies)</li>
-<li>Hospitality (required: comfort to those in need, no matter who they are)</li></ul></div></div>
-<h2>Alignment</h2>
+<li>Hospitality (required: comfort to those in need, no matter who they are)</li></ul></div></div></div>
+<hr/>
+<h2>陣營 (Alignment)</h2>
 <p class="InstructionsAfterHeader">Choose an alignment:</p>
-<div id="alignment"><h3 class="MoveName">Lawful</h3>
-<p class="NoIndent">Deny mercy to a criminal or unbeliever.</p>
-<h3 class="MoveName">Good</h3>
-<p class="NoIndent">Endanger yourself to protect someone weaker than you.</p></div>
-<h2>Gear</h2>
+<div id="alignment"><div class="Move"><h3 class="MoveName">Lawful</h3>
+<p class="NoIndent">Deny mercy to a criminal or unbeliever.</p></div>
+<div class="Move"><h3 class="MoveName">Good</h3>
+<p class="NoIndent">Endanger yourself to protect someone weaker than you.</p></div></div>
+<hr/>
+<h2>裝備 (Gear)</h2>
 <div id="gear"><p class="NoIndent">Your load is 12+Str. You start with dungeon rations (5 uses, 1 weight), scale armor (2 armor, 3 weight), and some mark of faith, describe it (0 weight). Choose your weapon:</p>
 <ul><li class="Option">Halberd (reach, +1 damage, two-handed, 2 weight)</li>
 <li class="Option">Long sword (close, +1 damage, 1 weight) and shield (+1 armor, 2 weight)</li></ul>
 <p class="NoIndent">Choose one:</p>
 <ul><li class="Option">Adventuring gear (1 weight)</li>
 <li class="Option">Dungeon rations (1 weight) and healing potion (0 weight)</li></ul></div>
-<h2>Bonds</h2>
+<hr/>
+<h2>羈絆 (Bonds)</h2>
 <div id="bonds"><p class="NoIndent">Fill in the name of one of your companions in at least one:</p>
 <p>_______________’s misguided behavior endangers their very soul!</p>
 <p>_______________ has stood by me in battle and can be trusted completely.</p>
 <p>I respect the beliefs of _______________ but hope they will someday see the true way.</p>
 <p>_______________ is a brave soul, I have much to learn from them.</p></div>
-<h2>Advanced Moves</h2>
+<hr/>
+<h2>進階動作 (Advanced Moves)</h2>
 <div id="moves"><p class="InstructionsAfterHeader">When you gain a level from 2–5, choose from these moves.</p>
-<h3 class="MoveName">Divine Favor</h3>
-<p class="NoIndent">Dedicate yourself to a deity (name a new one or choose one that’s already been established). You gain the commune and cast a spell cleric moves. When you select this move, treat yourself as a cleric of level 1 for using spells. Every time you gain a level thereafter, increase your effective cleric level by 1.</p>
-<h3 class="MoveName">Bloody Aegis</h3>
-<p class="NoIndent">When you take damage you can grit your teeth and accept the blow. If you do you take no damage but instead suffer a debility of your choice. If you already have all six debilities you can’t use this move.</p>
-<h3 class="MoveName">Smite</h3>
-<p class="NoIndent">While on a quest you deal +1d4 damage.</p>
-<h3 class="MoveName">Exterminatus</h3>
-<p class="NoIndent">When you <strong>speak aloud your promise to defeat an enemy</strong>, you deal +2d4 damage against that enemy and -4 damage against anyone else. This effect lasts until the enemy is defeated. If you fail to defeat the enemy or give up the fight, you can admit your failure, but the effect continues until you find a way to redeem yourself.</p>
-<h3 class="MoveName">Charge!</h3>
-<p class="NoIndent">When you <strong>lead the charge into combat</strong>, those you lead take +1 forward.</p>
-<h3 class="MoveName">Staunch Defender</h3>
-<p class="NoIndent">When you defend you always get +1 hold, even on a 6-.</p>
-<h3 class="MoveName">Setup Strike</h3>
-<p class="NoIndent">When you hack and slash, choose an ally. Their next attack against your target does +1d4 damage.</p>
-<h3 class="MoveName">Holy Protection</h3>
-<p class="NoIndent">You get +1 armor while on a quest.</p>
-<h3 class="MoveName">Voice of Authority</h3>
-<p class="NoIndent">Take +1 to order hirelings.</p>
-<h3 class="MoveName">Hospitaller</h3>
-<p class="NoIndent">When you heal an ally, you heal +1d8 damage.</p>
+<div class="Move"><h3 class="MoveName">Divine Favor</h3>
+<p class="NoIndent">Dedicate yourself to a deity (name a new one or choose one that’s already been established). You gain the commune and cast a spell cleric moves. When you select this move, treat yourself as a cleric of level 1 for using spells. Every time you gain a level thereafter, increase your effective cleric level by 1.</p></div>
+<div class="Move"><h3 class="MoveName">Bloody Aegis</h3>
+<p class="NoIndent">When you take damage you can grit your teeth and accept the blow. If you do you take no damage but instead suffer a debility of your choice. If you already have all six debilities you can’t use this move.</p></div>
+<div class="Move"><h3 class="MoveName">Smite</h3>
+<p class="NoIndent">While on a quest you deal +1d4 damage.</p></div>
+<div class="Move"><h3 class="MoveName">Exterminatus</h3>
+<p class="NoIndent">When you <strong>speak aloud your promise to defeat an enemy</strong>, you deal +2d4 damage against that enemy and -4 damage against anyone else. This effect lasts until the enemy is defeated. If you fail to defeat the enemy or give up the fight, you can admit your failure, but the effect continues until you find a way to redeem yourself.</p></div>
+<div class="Move"><h3 class="MoveName">Charge!</h3>
+<p class="NoIndent">When you <strong>lead the charge into combat</strong>, those you lead take +1 forward.</p></div>
+<div class="Move"><h3 class="MoveName">Staunch Defender</h3>
+<p class="NoIndent">When you defend you always get +1 hold, even on a 6-.</p></div>
+<div class="Move"><h3 class="MoveName">Setup Strike</h3>
+<p class="NoIndent">When you hack and slash, choose an ally. Their next attack against your target does +1d4 damage.</p></div>
+<div class="Move"><h3 class="MoveName">Holy Protection</h3>
+<p class="NoIndent">You get +1 armor while on a quest.</p></div>
+<div class="Move"><h3 class="MoveName">Voice of Authority</h3>
+<p class="NoIndent">Take +1 to order hirelings.</p></div>
+<div class="Move"><h3 class="MoveName">Hospitaller</h3>
+<p class="NoIndent">When you heal an ally, you heal +1d8 damage.</p></div>
 <p class="Instructions">When you gain a level from 6–10, choose from these moves or the level 2–5 moves.</p>
-<h3 class="MoveName">Evidence of Faith</h3>
+<div class="Move"><h3 class="MoveName">Evidence of Faith</h3>
 <p class="Requirement">Requires: Divine Favor</p>
-<p class="NoIndent">When you <strong>see divine magic as it happens</strong>, you can ask the GM which deity granted the spell and its effects. Take +1 when acting on the answers.</p>
-<h3 class="MoveName">Holy Smite</h3>
+<p class="NoIndent">When you <strong>see divine magic as it happens</strong>, you can ask the GM which deity granted the spell and its effects. Take +1 when acting on the answers.</p></div>
+<div class="Move"><h3 class="MoveName">Holy Smite</h3>
 <p class="Requirement">Replaces: Smite</p>
-<p class="NoIndent">While on a quest you deal +1d8 damage.</p>
-<h3 class="MoveName">Ever Onward</h3>
+<p class="NoIndent">While on a quest you deal +1d8 damage.</p></div>
+<div class="Move"><h3 class="MoveName">Ever Onward</h3>
 <p class="Requirement">Replaces: Charge!</p>
-<p class="NoIndent">When you lead the charge into combat, those you lead take +1 forward and +2 armor forward.</p>
-<h3 class="MoveName">Impervious Defender</h3>
+<p class="NoIndent">When you lead the charge into combat, those you lead take +1 forward and +2 armor forward.</p></div>
+<div class="Move"><h3 class="MoveName">Impervious Defender</h3>
 <p class="Requirement">Replaces: Staunch Defender</p>
-<p class="NoIndent">When you defend you always get +1 hold, even on a 6-. When you get a 12+ to defend instead of getting hold the nearest attacking creature is stymied giving you a clear advantage, the GM will describe it.</p>
-<h3 class="MoveName">Tandem Strike</h3>
+<p class="NoIndent">When you defend you always get +1 hold, even on a 6-. When you get a 12+ to defend instead of getting hold the nearest attacking creature is stymied giving you a clear advantage, the GM will describe it.</p></div>
+<div class="Move"><h3 class="MoveName">Tandem Strike</h3>
 <p class="Requirement">Replaces: Setup Strike</p>
-<p class="NoIndent">When you hack and slash, choose an ally. Their next attack against your target does +1d4 damage and they take +1 forward against them.</p>
-<h3 class="MoveName">Divine Protection</h3>
+<p class="NoIndent">When you hack and slash, choose an ally. Their next attack against your target does +1d4 damage and they take +1 forward against them.</p></div>
+<div class="Move"><h3 class="MoveName">Divine Protection</h3>
 <p class="Requirement">Replaces: Holy Protection</p>
-<p class="NoIndent">You get +2 armor while on a quest.</p>
-<h3 class="MoveName">Divine Authority</h3>
+<p class="NoIndent">You get +2 armor while on a quest.</p></div>
+<div class="Move"><h3 class="MoveName">Divine Authority</h3>
 <p class="Requirement">Replaces: Voice of Authority</p>
-<p class="NoIndent">Take +1 to order hirelings. When you roll a 12+ the hireling transcends their moment of fear and doubt and carries out your order with particular effectiveness or efficiency.</p>
-<h3 class="MoveName">Perfect Hospitaller</h3>
+<p class="NoIndent">Take +1 to order hirelings. When you roll a 12+ the hireling transcends their moment of fear and doubt and carries out your order with particular effectiveness or efficiency.</p></div>
+<div class="Move"><h3 class="MoveName">Perfect Hospitaller</h3>
 <p class="Requirement">Replaces: Hospitaller</p>
-<p class="NoIndent">When you heal an ally, you heal +2d8 damage.</p>
-<h3 class="MoveName">Indomitable</h3>
-<p class="NoIndent">When you suffer a debility (even through Bloody Aegis) take +1 forward against whatever caused it.</p>
-<h3 class="MoveName">Perfect Knight</h3>
-<p class="NoIndent">When you quest you choose three boons instead of two.</p></div>
+<p class="NoIndent">When you heal an ally, you heal +2d8 damage.</p></div>
+<div class="Move"><h3 class="MoveName">Indomitable</h3>
+<p class="NoIndent">When you suffer a debility (even through Bloody Aegis) take +1 forward against whatever caused it.</p></div>
+<div class="Move"><h3 class="MoveName">Perfect Knight</h3>
+<p class="NoIndent">When you quest you choose three boons instead of two.</p></div></div>
 
           </div>
        </div>
@@ -254,13 +261,13 @@
     <script>
       $("#sidemenu-topnav").addClass('currentul');
       $("#sidemenu").prepend("<h3>目錄</h3>");
-      $("h2, h1, .MonsterName").each(function(i) {
+      $("h2, h1, .MonsterName, .SpellName").each(function(i) {
           var current = $(this);
           current.attr("id", "title" + i);
           var tag = current.prop("tagName");
           
           var link_text = current.html();
-          if(current.context.className=="MonsterName"){
+          if(current.context.className=="MonsterName" || current.context.className=="SpellName"){
             link_text = link_text.replace(/\<span class=\"Tags\"\>.*\<\/span\>/g, "");
           }
 
@@ -278,8 +285,30 @@
       $(".Tags").each(function(i) {
         var current = $(this);
         var tags_arr = current.html().split(", ");
-        current.html(tags_arr.map(tag=>"<tag>"+tag+"</tag>").join(""));
+        current.html(tags_arr.map(function(tag){
+            var className = "";
+            tag = tag.trim();
+            console.log(tag);
+            if(isRangeTag(tag))         className = "red";
+            if(isSizeTag(tag))          className = "green";
+            if(isOrganizationTag(tag))  className = "blue";
+            if(isSpellLevelTag(tag))    className = "purple";
+            return `<tag class="${className}">${tag}</tag>`;
+          }).join(""));
       });
+
+      function isSpellLevelTag(tag){
+        return (tag.match(/等級 \d+|禱念|戲法|Level \d+|Rote|Cantrip/))? true: false;
+      }
+      function isRangeTag(tag){
+        return (tag.match(/觸及|近身|及遠|短程|遠程|Hand|Close|Reach|Near|Far/))? true: false;
+      }
+      function isSizeTag(tag){
+        return (tag.match(/微型|小型|大型|巨型|Tiny|Small|Large|Huge/))? true: false;
+      }
+      function isOrganizationTag(tag){
+        return (tag.match(/成群|集團|單獨|Horde|Group|Solitary/))? true: false;
+      }
     </script>
   </body>
 </html>
