--- a/classes/thief/index.html
+++ b/classes/thief/index.html
@@ -116,55 +116,60 @@
 <p>Sure, they give you lip for all the times you’ve snuck off alone but without you, who among them wouldn’t have been dissected by a flying guillotine or poisoned straight to death by some ancient needle trap? So, let them complain. When you’re done with all this delving you’ll toast their hero’s graves.</p>
 <p>From your castle. Full of gold. You rogue.</p></div>
 <hr/>
-<h2>Names</h2>
+<h2>名稱 (Names)</h2>
 <div id="names"><p class="NoIndent"><em>Halfling</em>: Felix, Rook, Mouse, Sketch, Trixie, Robin, Omar, Brynn, Bug</p>
 <p class="NoIndent"><em>Human</em>: Sparrow, Shank, Jack, Marlow, Dodge, Rat, Pox, Humble, Farley</p></div>
-<h2>Look</h2>
-<div id="look"><p class="NoIndent">Choose one for each:</p>
+<hr/>
+<h2>外觀 (Look)</h2>
+<div id="look"><p class="InstructionsAfterHeader">從每列中各自選擇一項：</p>
 <p class="NoIndent">Shifty Eyes or Criminal Eyes</p>
 <p class="NoIndent">Hooded Head, Messy Hair, or Cropped Hair</p>
 <p class="NoIndent">Dark Clothes, Fancy Clothes, or Common Clothes</p>
 <p class="NoIndent">Lithe Body, Knobby Body, or Flabby Body</p></div>
-<h2>Stats</h2>
+<hr/>
+<h2>屬性數值 (Stats)</h2>
 <p class="NoIndent">Your maximum HP is 6+Constitution.</p>
 <p class="NoIndent">Your base damage is <span id="Damage">d8</span>.</p>
-<h2>Starting Moves</h2>
+<hr/>
+<h2>起始動作 (Starting Moves)</h2>
 <div id="startingmoves"><p class="InstructionsAfterHeader">Choose a race and gain the corresponding move:</p>
-<div id="racialmoves"><h3 class="MoveName">Halfling</h3>
-<p class="NoIndent">When you attack with a ranged weapon, deal +2 damage.</p>
-<h3 class="MoveName">Human</h3>
-<p class="NoIndent">You are a professional. When you spout lore or discern realities about criminal activities, take +1.</p></div>
+<div id="racialmoves"><div class="Move"><h3 class="MoveName">Halfling</h3>
+<p class="NoIndent">When you attack with a ranged weapon, deal +2 damage.</p></div>
+<div class="Move"><h3 class="MoveName">Human</h3>
+<p class="NoIndent">You are a professional. When you spout lore or discern realities about criminal activities, take +1.</p></div></div>
 <div id="classmoves"><p class="Instructions">You start with these moves:</p>
-<h3 class="BasicMoveName">Trap Expert</h3>
+<div class="Move"><h3 class="BasicMoveName">Trap Expert</h3>
 <p class="NoIndent">When you <strong>spend a moment to survey a dangerous area</strong>, roll+DEX. ✴On a 10+, hold 3. ✴On a 7–9, hold 1. Spend your hold as you walk through the area to ask these questions:</p>
 <ul><li>Is there a trap here and if so, what activates it?</li>
 <li>What does the trap do when activated?</li>
-<li>What else is hidden here?</li></ul>
-<h3 class="BasicMoveName">Tricks of the Trade</h3>
-<p class="NoIndent">When you <strong>pick locks or pockets or disable traps</strong>, roll+DEX. ✴On a 10+, you do it, no problem. ✴On a 7–9, you still do it, but the GM will offer you two options between suspicion, danger, or cost.</p>
-<h3 class="BasicMoveName">Backstab</h3>
+<li>What else is hidden here?</li></ul></div>
+<div class="Move"><h3 class="BasicMoveName">Tricks of the Trade</h3>
+<p class="NoIndent">When you <strong>pick locks or pockets or disable traps</strong>, roll+DEX. ✴On a 10+, you do it, no problem. ✴On a 7–9, you still do it, but the GM will offer you two options between suspicion, danger, or cost.</p></div>
+<div class="Move"><h3 class="BasicMoveName">Backstab</h3>
 <p class="NoIndent">When you <strong>attack a surprised or defenseless enemy with a melee weapon</strong>, you can choose to deal your damage or roll+DEX. ✴On a 10+ choose two. ✴On a 7–9 choose one.</p>
 <ul><li>You don’t get into melee with them</li>
 <li>You deal your damage+1d6</li>
 <li>You create an advantage, +1 forward to you or an ally acting on it</li>
-<li>Reduce their armor by 1 until they repair it</li></ul>
-<h3 class="BasicMoveName">Flexible Morals</h3>
-<p class="NoIndent">When someone tries to detect your alignment you can tell them any alignment you like.</p>
-<h3 class="BasicMoveName">Poisoner</h3>
+<li>Reduce their armor by 1 until they repair it</li></ul></div>
+<div class="Move"><h3 class="BasicMoveName">Flexible Morals</h3>
+<p class="NoIndent">When someone tries to detect your alignment you can tell them any alignment you like.</p></div>
+<div class="Move"><h3 class="BasicMoveName">Poisoner</h3>
 <p class="NoIndent">You’ve mastered the care and use of a poison. Choose a poison from the list below; that poison is no longer dangerous for you to use. You also start with three uses of the poison you choose. Whenever you have time to gather materials and a safe place to brew you can make three uses of the poison you choose for free. Note that some poisons are applied, meaning you have to carefully apply it to the target or something they eat or drink. Touch poisons just need to touch the target, they can even be used on the blade of a weapon.</p>
 <ul><li>Oil of Tagit (applied): The target falls into a light sleep</li>
 <li>Bloodweed (touch): The target deals -1d4 damage ongoing until cured</li>
 <li>Goldenroot (applied): The target treats the next creature they see as a trusted ally, until proved otherwise</li>
-<li>Serpent’s Tears (touch): Anyone dealing damage to the target rolls twice and takes the better result.</li></ul></div></div>
-<h2>Alignment</h2>
+<li>Serpent’s Tears (touch): Anyone dealing damage to the target rolls twice and takes the better result.</li></ul></div></div></div>
+<hr/>
+<h2>陣營 (Alignment)</h2>
 <p class="InstructionsAfterHeader">Choose an alignment:</p>
-<div id="alignment"><h3 class="MoveName">Chaotic</h3>
-<p class="NoIndent">Leap into danger without a plan.</p>
-<h3 class="MoveName">Neutral</h3>
-<p class="NoIndent">Avoid detection or infiltrate a location.</p>
-<h3 class="MoveName">Evil</h3>
-<p class="NoIndent">Shift danger or blame from yourself to someone else.</p></div>
-<h2>Gear</h2>
+<div id="alignment"><div class="Move"><h3 class="MoveName">Chaotic</h3>
+<p class="NoIndent">Leap into danger without a plan.</p></div>
+<div class="Move"><h3 class="MoveName">Neutral</h3>
+<p class="NoIndent">Avoid detection or infiltrate a location.</p></div>
+<div class="Move"><h3 class="MoveName">Evil</h3>
+<p class="NoIndent">Shift danger or blame from yourself to someone else.</p></div></div>
+<hr/>
+<h2>裝備 (Gear)</h2>
 <div id="gear"><p class="NoIndent">Your load is 9+Str. You start with dungeon rations (5 uses, 1 weight), leather armor (1 armor, 1 weight), 3 uses of your chosen poison, and 10 coins. Choose your arms:</p>
 <ul><li class="Option">Dagger (hand, 1 weight) and short sword (close, 1 weight)</li>
 <li class="Option">Rapier (close, precise, 1 weight)</li></ul>
@@ -174,63 +179,65 @@
 <p class="NoIndent">Choose one:</p>
 <ul><li class="Option">Adventuring gear (1 weight)</li>
 <li class="Option">Healing potion (0 weight)</li></ul></div>
-<h2>Bonds</h2>
+<hr/>
+<h2>羈絆 (Bonds)</h2>
 <div id="bonds"><p class="NoIndent">Fill in the name of one of your companions in at least one:</p>
 <p>I stole something from _______________.</p>
 <p>_______________ has my back when things go wrong.</p>
 <p>_______________ knows incriminating details about me.</p>
 <p>_______________ and I have a con running.</p></div>
-<h2>Advanced Moves</h2>
+<hr/>
+<h2>進階動作 (Advanced Moves)</h2>
 <div id="moves"><p class="InstructionsAfterHeader">When you gain a level from 2–5, choose from these moves.</p>
-<h3 class="MoveName">Cheap Shot</h3>
-<p class="NoIndent">When using a precise or hand weapon, your backstab deals an extra +1d6 damage.</p>
-<h3 class="MoveName">Cautious</h3>
-<p class="NoIndent">When you use trap expert you always get +1 hold, even on a 6-.</p>
-<h3 class="MoveName">Wealth and Taste</h3>
-<p class="NoIndent">When you <strong>make a show of flashing around your most valuable possession</strong>, choose someone present. They will do anything they can to obtain your item or one like it.</p>
-<h3 class="MoveName">Shoot First</h3>
-<p class="NoIndent">You’re never caught by surprise. When an enemy would get the drop on you, you get to act first instead.</p>
-<h3 class="MoveName">Poison Master</h3>
-<p class="NoIndent">After you’ve used a poison once it’s no longer dangerous for you to use.</p>
-<h3 class="MoveName">Envenom</h3>
-<p class="NoIndent">You can apply even complex poisons with a pinprick. When you apply a poison that’s not dangerous for you to use to your weapon it’s touch instead of applied.</p>
-<h3 class="MoveName">Brewer</h3>
-<p class="NoIndent">When you have time to gather materials and a safe place to brew you can create three doses of any one poison you’ve used before.</p>
-<h3 class="MoveName">Underdog</h3>
-<p class="NoIndent">When you’re outnumbered, you have +1 armor.</p>
-<h3 class="MoveName">Connections</h3>
-<p class="NoIndent">When you put out word to the criminal underbelly about something you want or need, roll+CHA. ✴On a 10+, someone has it, just for you. ✴On a 7–9, you’ll have to settle for something close or it comes with strings attached, your call.</p>
+<div class="Move"><h3 class="MoveName">Cheap Shot</h3>
+<p class="NoIndent">When using a precise or hand weapon, your backstab deals an extra +1d6 damage.</p></div>
+<div class="Move"><h3 class="MoveName">Cautious</h3>
+<p class="NoIndent">When you use trap expert you always get +1 hold, even on a 6-.</p></div>
+<div class="Move"><h3 class="MoveName">Wealth and Taste</h3>
+<p class="NoIndent">When you <strong>make a show of flashing around your most valuable possession</strong>, choose someone present. They will do anything they can to obtain your item or one like it.</p></div>
+<div class="Move"><h3 class="MoveName">Shoot First</h3>
+<p class="NoIndent">You’re never caught by surprise. When an enemy would get the drop on you, you get to act first instead.</p></div>
+<div class="Move"><h3 class="MoveName">Poison Master</h3>
+<p class="NoIndent">After you’ve used a poison once it’s no longer dangerous for you to use.</p></div>
+<div class="Move"><h3 class="MoveName">Envenom</h3>
+<p class="NoIndent">You can apply even complex poisons with a pinprick. When you apply a poison that’s not dangerous for you to use to your weapon it’s touch instead of applied.</p></div>
+<div class="Move"><h3 class="MoveName">Brewer</h3>
+<p class="NoIndent">When you have time to gather materials and a safe place to brew you can create three doses of any one poison you’ve used before.</p></div>
+<div class="Move"><h3 class="MoveName">Underdog</h3>
+<p class="NoIndent">When you’re outnumbered, you have +1 armor.</p></div>
+<div class="Move"><h3 class="MoveName">Connections</h3>
+<p class="NoIndent">When you put out word to the criminal underbelly about something you want or need, roll+CHA. ✴On a 10+, someone has it, just for you. ✴On a 7–9, you’ll have to settle for something close or it comes with strings attached, your call.</p></div>
 <p class="Instructions">When you gain a level from 6–10, choose from these moves or the level 2–5 moves.</p>
-<h3 class="MoveName">Dirty Fighter</h3>
+<div class="Move"><h3 class="MoveName">Dirty Fighter</h3>
 <p class="Requirement">Replaces: Cheap Shot</p>
-<p class="NoIndent">When using a precise or hand weapon, your backstab deals an extra +1d8 damage and all other attacks deal +1d4 damage.</p>
-<h3 class="MoveName">Extremely Cautious</h3>
+<p class="NoIndent">When using a precise or hand weapon, your backstab deals an extra +1d8 damage and all other attacks deal +1d4 damage.</p></div>
+<div class="Move"><h3 class="MoveName">Extremely Cautious</h3>
 <p class="Requirement">Replaces: Cautious</p>
-<p class="NoIndent">When you use trap expert you always get +1 hold, even on a 6-. On a 12+ you get 3 hold and the next time you come near a trap the GM will immediately tell you what it does, what triggers it, who set it, and how you can use it to your advantage.</p>
-<h3 class="MoveName">Alchemist</h3>
+<p class="NoIndent">When you use trap expert you always get +1 hold, even on a 6-. On a 12+ you get 3 hold and the next time you come near a trap the GM will immediately tell you what it does, what triggers it, who set it, and how you can use it to your advantage.</p></div>
+<div class="Move"><h3 class="MoveName">Alchemist</h3>
 <p class="Requirement">Replaces: Brewer</p>
 <p class="NoIndent">When you have you have time to gather materials and a safe place to brew you can create three doses of any poison you’ve used before. Alternately you can describe the effects of a poison you’d like to create. The GM will tell you that you can create it, but with one or more caveats:</p>
 <ul><li>It will only work under specific circumstances</li>
 <li>The best you can manage is a weaker version</li>
 <li>It’ll take a while to take effect</li>
-<li>It’ll have obvious side effects</li></ul>
-<h3 class="MoveName">Serious Underdog</h3>
+<li>It’ll have obvious side effects</li></ul></div>
+<div class="Move"><h3 class="MoveName">Serious Underdog</h3>
 <p class="Requirement">Replaces: Underdog</p>
-<p class="NoIndent">You have +1 armor. When you’re outnumbered, you have +2 armor instead.</p>
-<h3 class="MoveName">Evasion</h3>
-<p class="NoIndent">When you defy danger on a 12+, you transcend the danger. You not only do what you set out to, but the GM will offer you a better outcome, true beauty, or a moment of grace.</p>
-<h3 class="MoveName">Strong Arm, True Aim</h3>
-<p class="NoIndent">You can throw any melee weapon, using it to volley. A thrown melee weapon is gone; you can never choose to reduce ammo on a 7–9.</p>
-<h3 class="MoveName">Escape Route</h3>
-<p class="NoIndent">When you’re in too deep and need a way out, name your escape route and roll+DEX. ✴On a 10+ you’re gone. ✴On a 7–9 you can stay or go, but if you go it costs you: leave something behind or take something with you, the GM will tell you what.</p>
-<h3 class="MoveName">Disguise</h3>
-<p class="NoIndent">When you have time and materials you can create a disguise that will fool anyone into thinking you’re another creature of about the same size and shape. Your actions can give you away but your appearance won’t.</p>
-<h3 class="MoveName">Heist</h3>
+<p class="NoIndent">You have +1 armor. When you’re outnumbered, you have +2 armor instead.</p></div>
+<div class="Move"><h3 class="MoveName">Evasion</h3>
+<p class="NoIndent">When you defy danger on a 12+, you transcend the danger. You not only do what you set out to, but the GM will offer you a better outcome, true beauty, or a moment of grace.</p></div>
+<div class="Move"><h3 class="MoveName">Strong Arm, True Aim</h3>
+<p class="NoIndent">You can throw any melee weapon, using it to volley. A thrown melee weapon is gone; you can never choose to reduce ammo on a 7–9.</p></div>
+<div class="Move"><h3 class="MoveName">Escape Route</h3>
+<p class="NoIndent">When you’re in too deep and need a way out, name your escape route and roll+DEX. ✴On a 10+ you’re gone. ✴On a 7–9 you can stay or go, but if you go it costs you: leave something behind or take something with you, the GM will tell you what.</p></div>
+<div class="Move"><h3 class="MoveName">Disguise</h3>
+<p class="NoIndent">When you have time and materials you can create a disguise that will fool anyone into thinking you’re another creature of about the same size and shape. Your actions can give you away but your appearance won’t.</p></div>
+<div class="Move"><h3 class="MoveName">Heist</h3>
 <p class="NoIndent">When you take time to make a plan to steal something, name the thing you want to steal and ask the GM these questions. When acting on the answers you and your allies take +1 forward.</p>
 <ul><li>Who will notice it’s missing?</li>
 <li>What’s its most powerful defense?</li>
 <li>Who will come after it?</li>
-<li>Who else wants it?</li></ul></div>
+<li>Who else wants it?</li></ul></div></div>
 
           </div>
        </div>
@@ -253,13 +260,13 @@
     <script>
       $("#sidemenu-topnav").addClass('currentul');
       $("#sidemenu").prepend("<h3>目錄</h3>");
-      $("h2, h1, .MonsterName").each(function(i) {
+      $("h2, h1, .MonsterName, .SpellName").each(function(i) {
           var current = $(this);
           current.attr("id", "title" + i);
           var tag = current.prop("tagName");
           
           var link_text = current.html();
-          if(current.context.className=="MonsterName"){
+          if(current.context.className=="MonsterName" || current.context.className=="SpellName"){
             link_text = link_text.replace(/\<span class=\"Tags\"\>.*\<\/span\>/g, "");
           }
 
@@ -277,8 +284,30 @@
       $(".Tags").each(function(i) {
         var current = $(this);
         var tags_arr = current.html().split(", ");
-        current.html(tags_arr.map(tag=>"<tag>"+tag+"</tag>").join(""));
+        current.html(tags_arr.map(function(tag){
+            var className = "";
+            tag = tag.trim();
+            console.log(tag);
+            if(isRangeTag(tag))         className = "red";
+            if(isSizeTag(tag))          className = "green";
+            if(isOrganizationTag(tag))  className = "blue";
+            if(isSpellLevelTag(tag))    className = "purple";
+            return `<tag class="${className}">${tag}</tag>`;
+          }).join(""));
       });
+
+      function isSpellLevelTag(tag){
+        return (tag.match(/等級 \d+|禱念|戲法|Level \d+|Rote|Cantrip/))? true: false;
+      }
+      function isRangeTag(tag){
+        return (tag.match(/觸及|近身|及遠|短程|遠程|Hand|Close|Reach|Near|Far/))? true: false;
+      }
+      function isSizeTag(tag){
+        return (tag.match(/微型|小型|大型|巨型|Tiny|Small|Large|Huge/))? true: false;
+      }
+      function isOrganizationTag(tag){
+        return (tag.match(/成群|集團|單獨|Horde|Group|Solitary/))? true: false;
+      }
     </script>
   </body>
 </html>
