--- a/monsters/caverns/index.html
+++ b/monsters/caverns/index.html
@@ -114,7 +114,7 @@
 <h3 class="MonsterName">掘地蟲 (Ankheg)<span class="Tags">集團, 大型</span></h3>
 <p class="MonsterStats">啃咬 (d8+1 傷害), 10 HP, 3 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 及遠</span></p>
-<p class="MonsterQualities"><strong>特殊性質:</strong> 掘地</p>
+<p class="MonsterQualities"><strong>特性:</strong> 掘地</p>
 <p class="MonsterDescription">
 	彷彿金屬板甲的厚皮和能碾碎一切的強力下顎就很糟糕了，而能將石牆腐蝕出孔洞的滿腹強酸更讓一切雪上加霜。如果牠們的大小和昆蟲相當，情況就已經夠壞的了，但這些該死玩意兒竟然還有膽子長的跟馬一樣長。這絕對不是自然產物！往好處想，還好牠們傾向待在同個地方……？哇，你說的可容易──這些掘地蟲又不是住在你家玉米田底下。 <b>本能</b>: 挖掘坑道</p>
 <ul>
@@ -134,7 +134,7 @@
 <h3 class="MonsterName">鎖喉怪 (Choker)<span class="Tags">單獨, 隱匿, 聰穎</span></h3>
 <p class="MonsterStats">鎖喉 (d10 傷害), 15 HP, 2 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 及遠</span></p>
-<p class="MonsterQualities"><strong>特殊性質:</strong> 柔韌彈性</p>
+<p class="MonsterQualities"><strong>特性:</strong> 柔韌彈性</p>
 <p class="MonsterDescription">
 	有人說這些鬼東西是一名殘忍巫師的家族後裔，他們因為他而被迫居住在地底。傳說他可怕的實驗使他變得畏懼陽光，而隨著數個世紀過去，他也拖著他的族裔們一起墮落成了不死之軀。這些怪物在某種程度上與人類相似，有著一顆頭、四肢什麼的，只不過牠們的皮膚濕滑而柔韌，雙臂瘦長，指爪緊攫。正如人們所預料的那樣，牠們憎恨所有沾染著陽光臭味的生物。這長期灌輸的嫉妒，可沒那麼容易甩掉。 <b>本能</b>: 拒絕亮光</p>
 <ul>
@@ -144,7 +144,7 @@
 <h3 class="MonsterName">斗篷偽怪 (Cloaker)<span class="Tags">單獨, 隱匿</span></h3>
 <p class="MonsterStats">絞纏 (d10 傷害, 無視護甲), 12 HP, 1 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身</span></p>
-<p class="MonsterQualities"><strong>特殊性質:</strong> 看起來就像斗篷</p>
+<p class="MonsterQualities"><strong>特性:</strong> 看起來就像斗篷</p>
 <p class="MonsterDescription">
 	住手，不要穿上那件斗篷，加瑞斯。不行。你不知道它去過什麼地方。我告訴你，它不是個好東西。你看！它動了！我才沒瘋，加瑞斯，它動了！不要披上！不！加瑞斯斯斯斯！ <b>本能</b>: 纏捲吞沒目標</p>
 <ul>
@@ -162,7 +162,7 @@
 <h3 class="MonsterName">土元素 (Earth Elemental)<span class="Tags">單獨, 巨型</span></h3>
 <p class="MonsterStats">猛砸 (d10+5 傷害), 27 HP, 4 護甲</p>
 <p class="MonsterStats"><span class="Tags">及遠, 擊退</span></p>
-<p class="MonsterQualities"><strong>特殊性質:</strong> 由石頭構成</p>
+<p class="MonsterQualities"><strong>特性:</strong> 由石頭構成</p>
 <p class="MonsterDescription">
 	我們那兒的薩滿曾說這世界上的一切，石頭、樹木、溪流，都寄宿著靈魂。現在，當我親眼目睹大地在我腳下翻騰，以及那雙岩石巨拳把我的朋友們揍了個半死之後，我才算是信了那個瘋老頭。我看見的那傢伙相當巨大－－就跟房子一樣大！它從沸騰的岩崩洪流中忽然出現，發出如同雪崩的嗓音。現在，我要展現我的敬意。理當如此。 <b>本能</b>: 展現大地的力量</p>
 <ul>
@@ -172,7 +172,7 @@
 <h3 class="MonsterName">火甲蟲 (Fire Beetle)<span class="Tags">成群, 小型</span></h3>
 <p class="MonsterStats">烈焰 (d6 傷害, 無視護甲), 3 HP, 3 護甲</p>
 <p class="MonsterStats"><span class="Tags">短程</span></p>
-<p class="MonsterQualities"><strong>特殊性質:</strong> 充滿烈焰</p>
+<p class="MonsterQualities"><strong>特性:</strong> 充滿烈焰</p>
 <p class="MonsterDescription"><em>
 	Scarabaeus pyractomena（糞金龜屬螢火蟲種）</em>！多麼美好的生物啊－－看到那在火炬照耀下閃閃發亮的甲殼了嗎？別太靠近，牠們相當喜怒無常。牠們肚子內的火焰可不是比喻，不不。看我刺激這頭野獸，然後……啊哈！烈火噴出！想不到，是吧？這些生物只要有一隻從地底下跑出來，就可以對附近的農莊或村子造成地獄般的災難。如果一整群的話呢？人們稱其為「火甲蟲大火」可是有原因的。 <b>本能</b>: 燃燒</p>
 <ul>
@@ -183,7 +183,7 @@
 <h3 class="MonsterName">石像鬼 (Gargoyle)<span class="Tags">成群, 隱匿, 囤財者</span></h3>
 <p class="MonsterStats">爪抓 (d6 傷害), 3 HP, 2 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身</span></p>
-<p class="MonsterQualities"><strong>特殊性質:</strong> 飛翼</p>
+<p class="MonsterQualities"><strong>特性:</strong> 飛翼</p>
 <p class="MonsterDescription">
 	這是個傷心的故事，真的。這些在過去由魔法師所孕育而出的石像鬼們已經再也沒有可以看守的城堡。牠們先祖的神聖使命仍流淌在牠們的血中，驅使牠們尋找一處場所－－大多是廢墟，但有時也會是洞窟、山丘、或高山懸崖－－並守護著該處，就彷彿牠們的主人還居住在裏頭一樣。不過，牠們可是出了名地擅長尋找埋藏於地底的貴重財寶。只要你能找到一頭這種帶翼爬蟲動物，你就一定能在附近找到寶藏。不過小心，牠們可不好找，而且往往成群結隊。 <b>本能</b>: 看守</p>
 <ul>
@@ -194,7 +194,7 @@
 <h3 class="MonsterName">凝膠方塊 (Gelatinous Cube)<span class="Tags">單獨, 大型, 隱匿, 不定型</span></h3>
 <p class="MonsterStats">吞沒 (d10+1 傷害, 無視護甲), 20 HP, 1 護甲</p>
 <p class="MonsterStats"><span class="Tags">觸及</span></p>
-<p class="MonsterQualities"><strong>特殊性質:</strong> 透明軀體</p>
+<p class="MonsterQualities"><strong>特性:</strong> 透明軀體</p>
 <p class="MonsterDescription">
 	有多少冒險者臨死前最後的想法是「怪了，這個走道怎麼好像比大多隧道都還要乾淨」？唉，太多了，而這全都要肇因於這團透明清澈的可怕威脅。這龐大的酸性團塊會將自身膨脹，填滿一間小房間或走廊後，開始非常緩慢地滑動，吞食所有在它路徑上的事物。它沒有辦法消化石頭或金屬，且經常會讓這些垃圾漂浮在它果凍般的身軀內。嘔。 <b>本能</b>: 清理乾淨</p>
 <ul>
@@ -232,7 +232,7 @@
 <h3 class="MonsterName">食腐獸 (Otyugh)<span class="Tags">單獨, 大型</span></h3>
 <p class="MonsterStats">觸手 (d10+3 傷害), 20 HP, 1 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 及遠, 擊退</span></p>
-<p class="MonsterQualities"><strong>特殊性質:</strong> 腐熱症</p>
+<p class="MonsterQualities"><strong>特性:</strong> 腐熱症</p>
 <p class="MonsterDescription">
 	食腐獸的求偶叫聲是一陣可怕而響亮的刺耳哭喊，聽起來就彷彿一頭瀕死大象和過度飢渴的禿鷲雜交時所發出的聲音。食腐獸大部分的時間都會半浸在汙濁的髒水中，且喜好吃食垃圾更勝過其他食物。也因此，牠經常在獸人、哥布林、和其他穴居亞人的內臟雜碎的餵養下長得又肥又壯。然而如果靠得太近，牠其中一條帶刺的觸手就會把你拽進那長滿鋒刃利齒的濕潤大口中。就算你僥倖逃過一劫，最好還是去看個醫生，否則你的勝利可能不會持續太久。 <b>本能</b>: 汙染弄髒</p>
 <ul>
@@ -242,7 +242,7 @@
 <h3 class="MonsterName">活蛆烏賊 (Maggot-Squid)	<span class="Tags">成群, 小型</span></h3>
 <p class="MonsterStats">咀嚼 (d6 傷害), 3 HP, 1 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身</span></p>
-<p class="MonsterQualities"><strong>特殊性質:</strong> 兩棲, 麻痺觸手</p>
+<p class="MonsterQualities"><strong>特性:</strong> 兩棲, 麻痺觸手</p>
 <p class="MonsterDescription">
 	創造出這種生物的神明肯定是對世界上的文明開了個病態的玩笑。活蛆烏賊甩動著一張長滿蠕動觸手的臉面，如果牠們碰到了你，你將體會到如同被閃電擊中一樣的感覺。牠們會使你麻痺癱瘓，並趁你無能為力的時候緩慢地咀嚼你身上的血肉。最好不要讓事情發展到那個地步。 <b>本能</b>: 進食</p>
 <ul>
@@ -251,7 +251,7 @@
 <h3 class="MonsterName">巨紫蠕蟲 (Purple Worm)<span class="Tags">單獨, 巨型</span></h3>
 <p class="MonsterStats">啃咬 (d10+5 傷害), 20 HP, 2 護甲</p>
 <p class="MonsterStats"><span class="Tags">及遠, 擊退</span></p>
-<p class="MonsterQualities"><strong>特殊性質:</strong> 掘地</p>
+<p class="MonsterQualities"><strong>特性:</strong> 掘地</p>
 <p class="MonsterDescription">
 	咿呀！咿呀！偉大的巨紫蠕蟲！那神聖的黏液是有福的！吾等是如此不配，得以行走在那綿延數里的巨大隧道。吾等不過是祂那吞噬萬物的紫蘭之光所映照的卑微之影。純粹的教徒，吾等冀望那日的降臨，終於回歸祂那利牙圍繞巨嘴的懷抱。讓祂吞噬我們！讓祂啃食我們的家園和村鎮，這樣我們才能被祂帶走，咿呀！咿呀！偉大的巨紫蠕蟲！ <b>本能</b>: 吞噬殆盡</p>
 <ul>
@@ -261,7 +261,7 @@
 <h3 class="MonsterName">樹繩妖 (Roper)<span class="Tags">單獨, 大型, 隱匿, 聰穎</span></h3>
 <p class="MonsterStats">啃咬 (d10+1 傷害), 16 HP, 1 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 及遠</span></p>
-<p class="MonsterQualities"><strong>特殊性質:</strong> 岩石般的血肉</p>
+<p class="MonsterQualities"><strong>特性:</strong> 岩石般的血肉</p>
 <p class="MonsterDescription">
 	進化的偶然創造出了一種聰明的地底獵食者。偽裝成岩石般的型態──通常會是鐘乳石或是石筍的樣子──樹繩妖會等待牠的獵物靠近。一旦獵物經過，無論那是一只老鼠、一隻哥布林、或是一名魯莽的冒險者，大量細長的鞭狀觸手將從牠的表皮呼嘯湧出，眨眼間完成了數以百計的鞭笞，並將暈眩的獵物拖進樹繩妖的血盆大口之中。對於這看起來像石頭的東西來說，這方法可說是出奇的有效。 <b>本能</b>: 埋伏偷襲</p>
 <ul>
@@ -272,7 +272,7 @@
 <h3 class="MonsterName">食腐蛆 (Rot Grub)<span class="Tags">成群, 微型</span></h3>
 <p class="MonsterStats">鑽入 (d6-2 傷害), 3 HP, 0 護甲</p>
 <p class="MonsterStats"><span class="Tags">觸及</span></p>
-<p class="MonsterQualities"><strong>特殊性質:</strong> 鑽入血肉之中</p>
+<p class="MonsterQualities"><strong>特性:</strong> 鑽入血肉之中</p>
 <p class="MonsterDescription">
 	牠們住在你的皮膚之下。或你的血肉臟器內。或你的眼球之中。牠們在你體內成長茁壯，然後，在一場血腥駭人的盛大演出之後，破體掘出。令人作嘔。 <b>本能</b>: 寄生</p>
 <ul>
@@ -283,7 +283,7 @@
 <h3 class="MonsterName">蜘蛛之主 (Spiderlord)<span class="Tags">單獨, 大型, 狡猾, 聰穎</span></h3>
 <p class="MonsterStats">下顎 (d8+4 傷害), 16 HP, 3 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 及遠</span></p>
-<p class="MonsterQualities"><strong>特殊性質:</strong> 掘地</p>
+<p class="MonsterQualities"><strong>特性:</strong> 掘地</p>
 <p class="MonsterDescription">就連蜘蛛也有牠們自己的神衹，蟄伏網中，用那小小腳爪合掌祈禱，對祂低語傾訴。 <b>本能</b>: 編織陷網（字面意義和譬喻兼具）</p>
 <ul>
 	<li>使目標纏陷在蛛網之中</li>
@@ -348,13 +348,12 @@
         current.html(tags_arr.map(function(tag){
             var className = "";
             tag = tag.trim();
-            console.log(tag);
             if(isRangeTag(tag))         className = "red";
             if(isSizeTag(tag))          className = "green";
             if(isOrganizationTag(tag))  className = "blue";
             if(isSpellLevelTag(tag))    className = "purple";
             return `<tag class="${className}">${tag}</tag>`;
-          }).join(""));
+          }).join(" "));
       });
 
       function isSpellLevelTag(tag){
