--- a/monsters/overview/index.html
+++ b/monsters/overview/index.html
@@ -134,27 +134,29 @@
 <h3>Monsters Without Stats</h3>
 <p class="NoIndent">Some creatures operate on a scale so far beyond the mortal that concepts like HP, armor, and damage just do not hold. Some creatures just aren’t dangerous in a fight. These creatures may still cause problems for the players and may even be defeated with clever thinking and enough preparation.</p>
 <p>If a creature is of such a scale far beyond the players, or if it just doesn’t put up a physical fight, don’t assign it HP, damage, or armor. You can still use the monster creation rules to give it tags. The core of a stat-less monster is its instinct and moves; you can have it make its moves and act according to its instinct even without numeric stats.</p>
+<hr/>
 <h2>怪物標籤 (Monster Tags)</h2>
-<p class="NoIndent"><tag>魔法 (Magical)</tag>: It is by nature magical through and through.</p>
-<p class="NoIndent"><tag>狡猾 (Devious)</tag>: Its main danger lies beyond the simple clash of battle.</p>
-<p class="NoIndent"><tag>不定型 (Amorphous)</tag>: Its anatomy and organs are bizarre and unnatural.</p>
-<p class="NoIndent"><tag>組織 (Organized)</tag>: It has a group structure that aids it in survival. Defeating one may cause the wrath of others. One may sound an alarm.</p>
-<p class="NoIndent"><tag>聰穎 (Intelligent)</tag>: It’s smart enough that some individuals pick up other skills. The GM can adapt the monster by adding tags to reflect specific training, like a mage or warrior.</p>
-<p class="NoIndent"><tag>囤財者 (Hoarder)</tag>: It almost certainly has treasure.</p>
-<p class="NoIndent"><tag>隱匿 (Stealthy)</tag>: It can avoid detection and prefers to attack with the element of surprise.</p>
-<p class="NoIndent"><tag>駭人 (Terrifying)</tag>: Its presence and appearance evoke fear.</p>
-<p class="NoIndent"><tag>謹慎 (Cautious)</tag>: It prizes survival over aggression.</p>
-<p class="NoIndent"><tag>構裝體 (Construct)</tag>: It was made, not born</p>
-<p class="NoIndent"><tag>異位面 (Planar)</tag>: It’s from beyond this world</p>
+<p class="NoIndent"><tag>魔法 (Magical)</tag>: 牠徹頭徹尾都是與生俱來的魔法。</p>
+<p class="NoIndent"><tag>狡猾 (Devious)</tag>: 牠最主要的威脅並不在於單純的戰鬥衝突。</p>
+<p class="NoIndent"><tag>不定型 (Amorphous)</tag>: 牠的身體構造和器官相當怪異而不自然。</p>
+<p class="NoIndent"><tag>組織 (Organized)</tag>: 牠有著一個能幫助牠求生的族群結構。擊敗其中一隻可能會招致眾怒。單一個體也可能會發出警報。</p>
+<p class="NoIndent"><tag>聰穎 (Intelligent)</tag>: 牠相當聰明，某些個體甚至還能夠學會其他技能。GM可以透過追加標籤來調整這類怪物，反映出特定的訓練，例如法師或戰士。</p>
+<p class="NoIndent"><tag>囤財者 (Hoarder)</tag>: 牠幾乎必定擁有財寶。</p>
+<p class="NoIndent"><tag>隱匿 (Stealthy)</tag>: 牠可以避免被察覺，並喜好以突襲的方式展開攻擊。</p>
+<p class="NoIndent"><tag>駭人 (Terrifying)</tag>: 牠的存在與長相會引發恐懼。</p>
+<p class="NoIndent"><tag>謹慎 (Cautious)</tag>: 牠重視生存更勝過侵攻。</p>
+<p class="NoIndent"><tag>構裝體 (Construct)</tag>: 牠是被製造出來的，而非被生下。</p>
+<p class="NoIndent"><tag>異位面 (Planar)</tag>: 牠來自另外一個世界。</p>
 <h3>群集標籤 (Organization Tags)</h3>
-<p class="NoIndent"><tag>成群 (Horde)</tag>: Where there’s one, there’s more. A lot more.</p>
-<p class="NoIndent"><tag>集團 (Group)</tag>: Usually seen in small numbers, 3–6 or so.</p>
-<p class="NoIndent"><tag>單獨 (Solitary)</tag>: It lives and fights alone.</p>
+<p class="NoIndent"><tag class="blue">成群 (Horde)</tag>: 當你看到一只，代表附近有更多，更多更多。</p>
+<p class="NoIndent"><tag class="blue">集團 (Group)</tag>: 常以小數量團體出現，通常約3~6只。</p>
+<p class="NoIndent"><tag class="blue">單獨 (Solitary)</tag>: 牠孤身一人生活並戰鬥。</p>
 <h3>體型標籤 (Size Tags)</h3>
-<p class="NoIndent"><tag>微型 (Tiny)</tag>: 牠比半身人還要再小很多。</p>
-<p class="NoIndent"><tag>小型 (Small)</tag>: 牠有著與半身人差不多的體型。</p>
-<p class="NoIndent"><tag>大型 (Large)</tag>: 牠比人類要大上許多，差不多跟馬車一樣大。</p>
-<p class="NoIndent"><tag>巨型 (Huge)</tag>: 牠和一棟小房子一樣大，或甚至還要再更大。</p>
+<p class="NoIndent"><tag class="green">微型 (Tiny)</tag>: 牠比半身人還要再小很多。</p>
+<p class="NoIndent"><tag class="green">小型 (Small)</tag>: 牠有著與半身人差不多的體型。</p>
+<p class="NoIndent"><tag class="green">大型 (Large)</tag>: 牠比人類要大上許多，差不多跟馬車一樣大。</p>
+<p class="NoIndent"><tag class="green">巨型 (Huge)</tag>: 牠和一棟小房子一樣大，或甚至還要再更大。</p>
+<hr/>
 <h2>Making Monsters</h2>
 <p class="NoIndent">Monsters start with your description of them. Whether you’re making the monster before play or just as the players come face-to-face with it, every monster starts with a clear vision of what it is and what it does.</p>
 <p>If you’re making a monster between sessions start by imagining it. Imagine what it looks like, what it does, why it stands out. Imagine the stories told about it and what effects it has had on the world.</p>
@@ -314,13 +316,12 @@
         current.html(tags_arr.map(function(tag){
             var className = "";
             tag = tag.trim();
-            console.log(tag);
             if(isRangeTag(tag))         className = "red";
             if(isSizeTag(tag))          className = "green";
             if(isOrganizationTag(tag))  className = "blue";
             if(isSpellLevelTag(tag))    className = "purple";
             return `<tag class="${className}">${tag}</tag>`;
-          }).join(""));
+          }).join(" "));
       });
 
       function isSpellLevelTag(tag){
