--- a/monsters/folk/index.html
+++ b/monsters/folk/index.html
@@ -120,7 +120,7 @@
 <h3 class="MonsterName">冒險者 (Adventurer)<span class="Tags">成群, 聰穎</span></h3>
 <p class="MonsterStats">利劍 (d6 傷害), 3 HP, 1 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身</span></p>
-<p class="MonsterQualities"><strong>特殊性質:</strong> 無盡的熱忱</p>
+<p class="MonsterQualities"><strong>特性:</strong> 無盡的熱忱</p>
 <p class="MonsterDescription">「地球上的渣滓，他們就是這種人。一群大搖大擺走進城鎮的武裝男女，揮舞炫耀著那總之能把這整個地方夷為平地的魔法和凡俗力量。他們那一袋又一袋的戰利品，還滴著那為此被他們所殺的可憐混蛋的鮮血。如果你問我的話，我會說一場經濟浩劫很快就要發生，整個經濟體系都將被連根拔起。這群危險，捉摸不定的要命流浪漢……噢，等等，你是個冒險者？那當我沒說。」 <b>本能</b>: 不冒險，毋寧死</p>
 <ul>
 	<li>做一些徒勞的差事</li>
@@ -147,76 +147,114 @@
 	<li>推翻政權</li>
 </ul>
 <h3 class="MonsterName">弄臣 (Fool)</h3>
-<p class="MonsterDescription">There’s not but one person in all the King’s court allowed to speak the truth. The real, straight-and-honest truth about anything. The fool couches it all in bells and prancing and chalky face-paint, but who else gets to tell the King what’s what? You can trust a fool, they say, especially when he’s made you red-faced and you’d just as soon drown him in a cesspit. <b>本能</b>: To mock</p>
-<ul><li>Expose injustice</li>
-<li>Play a trick</li></ul>
+<p class="MonsterDescription">
+	在眾臣中就只有這麼一個人被允許在王宮中說出真話：一切真實、直接而誠實的真相。弄臣將這一切藉著鈴鐺、歡躍騰跳、以及粉白妝容表達了出來，而除他之外又有誰能夠告訴國王孰是孰非？你可以信任弄臣，他們這麼說，尤其是當他把你搞得面紅耳赤，而你情願把他淹死在糞坑的時候。 <b>本能</b>: 嘲弄</p>
+<ul>
+	<li>揭露不公義之事</li>
+	<li>惡作劇</li>
+</ul>
 <h3 class="MonsterName">衛兵 (Guardsman)<span class="Tags">集團, 聰穎, 組織</span></h3>
 <p class="MonsterStats">矛 (d8 傷害), 6 HP, 1 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 及遠</span></p>
-<p class="MonsterDescription">Noble protector or merely drunken lout, it often makes no difference to these sorts. Falling shy of a noble knight, the proud town guard is an ancient profession nonetheless. These folks of the constabulary often dress in the colors of their lord (when you can see it under the mud) and, depending on the richness of that lord, might even have a decent weapon and some armor that fits. Those are the lucky ones. Even so, someone has to be there to keep an eye on the gate when the Black Riders have been spotted in the woods. Too many of us owe our lives to these souls—remember that the next time one is drunkenly insulting your mother, hmm? <b>本能</b>: To do as ordered</p>
-<ul><li>Uphold the law</li>
-<li>Make a profit</li></ul>
+<p class="MonsterDescription">
+	是高貴的保護者、亦或僅僅是爛醉的蠢人，對這些人而言往往沒有什麼不同。儘管不及貴族騎士，這些驕傲的城鎮守衛仍是個相當古老的職業。這些警衛經常穿著代表他們領主顏色的衣著（如果衣服上的骯髒泥漬沒有將其蓋住），且根據領主的富裕程度，他們也可能擁有些像樣的武器以及些合身的鎧甲。這些人可真是幸運。不過即便如此，當黑騎士在森林中被目擊，總是得有人要過去緊守著大門。我們之中有太多人欠了這些人一命－－記住，當下次再有人在爛醉時侮辱你的母親，哼嗯……？ <b>本能</b>: 遵循命令行事</p>
+<ul>
+	<li>維護法律</li>
+	<li>賺錢</li>
+</ul>
 <h3 class="MonsterName">半身人盜賊 (Halfling Thief)<span class="Tags">單獨, 小型, 聰穎, 隱匿, 狡猾</span></h3>
 <p class="MonsterStats">匕首 (w[2d8] 傷害), 12 HP, 1 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身</span></p>
-<p class="MonsterDescription">It would be foolish, now, to draw conclusions about folks just because they happen to be good at one thing or another. Then again, a spade’s a spade, isn’t it. Or maybe just the goodly, soft-and-sweet type of Halfling have the mind to stay in their grassy-hill homes and aren’t the type you find in the slums and taverns of the mannish world. Perhaps they’re there to cut your purse for calling them “halfling” in the first place. Not all take so kindly to the title. Or they’re playing a game, pretending to be a child in need of alms—and your arrogant eyes can’t even see the difference until too late. Well, it matters little. They’re gone with your coin before you even realize you deserved it. <b>本能</b>: To live a life of stolen luxury</p>
-<ul><li>Steal</li>
-<li>Put on the appearance of friendship</li></ul>
+<p class="MonsterDescription">
+	聽好，只因為他們剛好擅長某事就對整個族群下結論，是件相當愚蠢的行為。再說一次，不要拐彎抹角，好嗎？也許只是那類好心、溫柔且甜美的半身人剛好比較願意待在他們那草木青青的家中，而你在酒館和貧民窟內發現的半身人剛好不是這類人。也許他們幹走你的皮包的原因，是因為你一開始稱呼他們為「半身人」，嘿，不是每個人都喜歡這個稱呼。或者他們可能只是在玩遊戲，假裝成需要幫忙的孩童－－而你驕傲自大的眼神直到一切都太遲之前都甚至完全沒發現其中的區別。好吧，這也不重要了。在你意識到這是你應得的之前，他們早已帶著你的金幣遠走高飛。 <b>本能</b>: 過著偷盜而來的奢華人生</p>
+<ul>
+	<li>偷竊</li>
+	<li>裝出友好的樣子</li>
+</ul>
 <h3 class="MonsterName">野巫師 (Hedge Wizard)<span class="Tags">魔法</span></h3>
-<p class="MonsterDescription">Not all those who wield the arcane arts are adventuring wizards. Nor necromancers in mausoleums or sorcerers of ancient bloodline. Some are just old men and women, smart enough to have discovered a trick or two. It might make them a bit batty to come by that knowledge, but if you’ve a curse to break or a love to prove, might be that a hedge wizard will help you, if you can find his rotten hut in the swamp and pay the price he asks. <b>本能</b>: 學習</p>
-<ul><li>Cast almost the right spell (for a price)</li>
-<li>Make deals beyond their ken</li></ul>
+<p class="MonsterDescription">
+	並不是所有施展奧術祕法的傢伙都是樂於冒險的巫師。既非陵墓中的死靈法師、也不是傳承遠古血脈的術士，有些人不過只是名年邁的老男人或老女人，聰明到足以發現施展一兩個魔法花招的訣竅。這些知識可能會讓他們變得有些瘋癲，但如果你有個必須打破的詛咒或渴望證明的愛，那麼野巫師或許正是能夠幫上你的人，只要你能在沼澤中找到他那破爛的小屋，並支付他所要求的代價。 <b>本能</b>: 學習</p>
+<ul>
+	<li>施放幾乎符合要求的法術（要求代價）</li>
+	<li>進行超出他們知識範圍的交易</li>
+</ul>
 <h3 class="MonsterName">大祭司 (High Priest)</h3>
-<p class="MonsterDescription">Respected by all who gaze upon them, the high priests and abbesses of Dungeon World are treated with a sort of reverence. Whether they pay homage to Ur-thuu-hak, God of Swords, or whisper quiet prayers to Namiah, precious daughter of peace, they know a thing or two that you and I won’t ever know. The gods speak to them as a hawker-of-wares might speak to us in the marketplace. For this, for the bearing-of-secrets and the knowing-of-things, we give them a wide berth as they pass in their shining robes. <b>本能</b>: 領導</p>
-<ul><li>Set down divine law</li>
-<li>Reveal divine secrets</li>
-<li>Commission divine undertakings</li></ul>
+<p class="MonsterDescription">
+	為所有仰望他們的群眾所崇敬，地城世界的大祭司與女修院院長總是被尊敬的對待。無論他們是向刀劍之神烏爾．圖．哈克致敬，或是向尊貴的和平之女納米亞沉默地低語祈禱，他們都知曉一兩件你我永遠無法得知的真相。諸神對他們訴說，就如同商場小販與我們對話。為此，為著持守之密以及通曉之識，當他們身披璀璨長袍經過時，我們敬而遠之。 <b>本能</b>: 領導</p>
+<ul>
+	<li>制定神聖律法</li>
+	<li>揭曉神聖之秘</li>
+	<li>委派神聖任務</li>
+</ul>
 <h3 class="MonsterName">獵人 (Hunter)<span class="Tags">集團, 聰穎</span></h3>
-<p class="MonsterStats">劣質弓 (d6 傷害), 6 HP, 1 護甲</p>
+<p class="MonsterStats">粗糙獵弓 (d6 傷害), 6 HP, 1 護甲</p>
 <p class="MonsterStats"><span class="Tags">短程, 遠程</span></p>
-<p class="MonsterDescription">The wilds are home to more than just beasts of horn and scale. There are men and women out there, too—those who smell blood on the wind and stalk the plains in the skins of their prey. Whether with a trusty longbow bought on a rare trip into the city or with a knife of bone and sinew, these folk have more in common with the things they track and eat than with their own kind. Solemn, somber and quiet, they find a sort of peace in the wild. <b>本能</b>: 求生</p>
-<ul><li>Bring back news from the wilds</li>
-<li>Slay a beast</li></ul>
+<p class="MonsterDescription">
+	荒野並不僅僅是鱗角之獸的家。那裡同樣住著男男女女－－他們能夠嗅到風中的血腥味，並身披獵物的皮毛在平原上遊蕩。無論是在一次難得的進城之旅中買到一把值得信賴的長弓，或是配著骸骨筋弦製成的砍刀，這些傢伙比起自己的同類，反倒與他們所追跡的事物有著更多的共通點。莊嚴、肅穆、而沉默，他們在荒野中找到了某種安寧。 <b>本能</b>: 求生</p>
+<ul>
+	<li>從荒野中帶回新消息</li>
+	<li>屠殺一頭野獸</li></ul>
 <h3 class="MonsterName">騎士 (Knight)<span class="Tags">單獨, 聰穎, 組織, 謹慎</span></h3>
 <p class="MonsterStats">利劍 (b[2d10] 傷害), 12 HP, 4 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身</span></p>
-<p class="MonsterDescription">What youngster doesn’t cling to the rail at the mighty joust, blinded by the sun on their glittering armor, wishing they could be the one adorned in steel and riding to please the King and Queen? What peasant youth with naught but a loaf of bread and a lame sow doesn’t wish to trade it all in for the lance and the bright pennant? A knight is many things—a holy warrior, a sworn sword, a villain sometimes, too, but a knight cannot help but be a symbol to all who see her. A knight means something. <b>本能</b>: To live by a code</p>
-<ul><li>Make a moral stand</li>
-<li>Lead soldiers into battle</li></ul>
+<p class="MonsterDescription">
+	有哪個年輕人在激烈的比武大賽中能不緊抓欄杆，任憑那耀眼盔甲照得自己睜不開眼，無法抑制心中的渴望，希冀自己就是那位身披鋼鎧，騎馬衝鋒以取悅國王與王后的尊貴騎士？又有哪個除了麵包和一頭瘸腿母豬之外一無所有的農家青年，會不願傾家蕩產以換取一柄長矛和鮮豔旌旗？騎士意味著許多事──神聖的戰士、奉獻於誓言的寶劍、有時也可能會是個惡棍。但對於所有看著她的群眾，騎士只能是一個象徵。騎士確實意義非凡。 <b>本能</b>: 遵循典範而活</p>
+<ul>
+	<li>站在道德立場</li>
+	<li>率領士兵進入戰場</li>
+</ul>
 <h3 class="MonsterName">商人 (Merchant)</h3>
-<p class="MonsterDescription">“Ten foot poles. Get your ten foot poles, here. Torches, bright and hot. Mules, too—stubborn but immaculately bred. Need a linen sack, do you? Right over here! Come and get your ten foot poles!” <b>本能</b>: 獲利</p>
-<ul><li>Propose a business venture</li>
-<li>Offer a “deal”</li></ul>
+<p class="MonsterDescription">
+	「十呎長桿。來這兒買一根屬於你的十呎長桿！還有火把，又亮又燙！驢子──固執但血統純正。需要大麻袋對嗎？通通都在這裡！快來買你的十呎長桿！」 <b>本能</b>: 賺錢獲利</p>
+<ul>
+	<li>提出一項商業投資</li>
+	<li>提供一筆「交易」</li>
+</ul>
 <h3 class="MonsterName">貴族 (Noble)</h3>
-<p class="MonsterDescription">Are they granted their place by the gods, perhaps? Is that why they’re able to pass their riches and power down by birth? Some trick or enchantment of the blood, maybe. The peasant bends his knee and scrapes and toils and the noble wears the finery of his place and, they say, we all have our burdens to bear. Seems to me that some of us have burdens of stone and some carry their weight in gold. It’s a tough life. <b>本能</b>: 統治</p>
+<p class="MonsterDescription">
+	或許，他們的地位是諸神賜予的吧？這就是為什麼他們能將財富權力代代相傳的原因？也許是某種血脈相承的技倆或魔法，之類的。當農民們在田裡屈膝、吃苦、勞碌終生，而貴族們於家中穿著華服，他們卻說，我們每個人都背著自己的重擔。在我看來，我們之中有人擔著的是沉重粗石，有人則是背著他們閃亮的黃金。這可真是個艱難的人生。 <b>本能</b>: 統治</p>
 <ul>
 	<li>發布一項命令</li>
 	<li>賜予獎賞</li>
 </ul>
 <h3 class="MonsterName">農民 (Peasant)</h3>
-<p class="MonsterDescription">Covered in muck, downtrodden at the bottom of the great chain of being, we all stand on the backs of those who grow our food on their farms. Some peasants do better than others, but none will ever see a coin of gold in their day. They’ll dream at night of how someday, somehow, they’ll fight a dragon and save a princess. Don’t act like you weren’t one before you lost what little sense you had, adventurer. <b>本能</b>: To get by</p>
-<ul><li>Plead for help</li>
-<li>Offer a simple reward and gratitude</li></ul>
+<p class="MonsterDescription">
+	身覆淤泥，被踩在生命之鏈的最底層，我們全都站在那些為我們在農田中種植食糧的人們背上。儘管有些農民的表現比其他人優秀，但在他們的生活中卻從不曾有人見過一枚金幣。他們會在晚上做夢，夢想著某天，以某種方法，他們能奮戰巨龍並營救美麗的公主。在你失去僅存的一點判斷力之前別裝作你好像不是其中一名壓迫者一樣，冒險者啊。 <b>本能</b>: 將就過日</p>
+<ul>
+	<li>請求幫助</li>
+	<li>提供簡單的報酬和感激之情</li>
+</ul>
 <h3 class="MonsterName">叛亂份子 (Rebel)<span class="Tags">成群, 聰穎, 組織</span></h3>
 <p class="MonsterStats">斧頭 (d6 傷害), 3 HP, 1 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身</span></p>
-<p class="MonsterDescription">In the countryside they’d be called outlaw and driven off or killed. The city, though, is full of places to hide. Damp basements to pore over maps and to plan and plot against a corrupt system. Like rats, they gnaw away at order, either to supplant it anew or just erode the whole thing. The line between change and chaos is a fine one—some rebels walk that thin line and others just want to see it all torched. Disguise, a knife in the dark or a thrown torch at the right moment are all tools of the rebel. The burning brand of anarchy is a common fear amongst the nobles of Dungeon World. These men and women are why. <b>本能</b>: 擾亂秩序</p>
-<ul><li>Die for a cause</li>
-<li>Inspire others</li></ul>
+<p class="MonsterDescription">
+	在鄉村，他們會被稱為亡命之徒，被驅趕，或被殺害。不過在大城市，到處都是藏身之處。潛伏在潮濕的地下室仔細研究地圖，籌措計畫和陰謀以對抗腐敗的制度。就像是溝鼠，他們嚙咬秩序，要嘛取而代之，要嘛乾脆整個破壞殆盡。改變與混亂之間只有一線之隔－－有些叛亂份子謹慎行走在這條鋼索上，而有些人則只想看著這一切統統付之一炬。偽裝潛伏、暗中遞刀、或在關鍵時刻扔出的火炬，這一切全都是反叛者的工具。熊熊燃燒的無政府狀態是地城世界的貴族們共同的恐懼，而這些男男女女正是罪魁禍首。 <b>本能</b>: 擾亂秩序</p>
+<ul>
+	<li>為大義捨身赴死</li>
+	<li>激勵他人</li>
+</ul>
 <h3 class="MonsterName">士兵 (Soldier)<span class="Tags">成群, 聰穎, 組織</span></h3>
 <p class="MonsterStats">矛 (d6 傷害), 3 HP, 1 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 及遠</span></p>
-<p class="MonsterDescription">For a commoner with a strong arm, sometimes it’s this or be a bandit. It’s wear the colors and don ill-fitting armor and march into the unknown with a thousand other scared men and women conscripted to fight the wars of our time. They could be hiding out in the woods instead, living off poached elk and dodging the king’s guard. Better to risk one’s life in service to a cause. To bravely toss one’s lot in with one’s fellows and hope to come out the other side still in one piece. Besides, the nobles need strong men and women. What is it they say? A handful of soldiers beats a mouthful of arguments. <b>本能</b>: 戰鬥</p>
-<ul><li>March into battle</li>
-<li>Fight as one</li></ul>
+<p class="MonsterDescription">
+	對於手臂強壯有力的平民來說，有時就是選擇從軍，或是落草為寇。穿著鮮豔的制服，身披不合身的盔甲，跟其他千千萬萬被召集的驚恐男女一同行軍至未知之地，加入我們這個世代的戰爭。他們是可以選擇藏身在樹林之間，一邊靠著盜獵的麋鹿苟活，一邊躲避王室守衛的追查。但為了事業賣命奉獻豈不是更好？勇敢地把自己的命運與同伴們一同投入戰場，並祈禱彼此能安然無恙地從另一邊走出。況且，貴族們也確實需要一群健壯的男女。他們是怎麼說的？拳頭大的說話總是比較大聲。 <b>本能</b>: 戰鬥</p>
+<ul>
+	<li>向著戰場行軍</li>
+	<li>同心作戰</li>
+</ul>
 <h3 class="MonsterName">間諜 (Spy)</h3>
-<p class="MonsterDescription">Beloved of kings but never truly trusted. Mysterious, secretive and alluring, the life of a spy is, if you ask a commoner, full of romance and intrigue. They’re a knife in the dark and a pair of watchful eyes. A spy can be your best friend, your lover or that old man you see in the market every day. One never knows. Hells, maybe you’re a spy—they say there’s magic that can turn folks’ minds without them ever knowing it. How can we trust you? <b>本能</b>: To infiltrate</p>
-<ul><li>Report the truth</li>
-<li>Double cross</li></ul>
-<h3 class="MonsterName">Tinkerer	</h3>
-<p class="MonsterDescription">It’s said that if you see a tinker on the road and you don’t offer him a swig of ale or some of your food that he’ll leave a curse of bad luck behind. A tinker is a funny thing. These strange folk often travel the roads between towns with their oddment carts and favorite mules. With a ratty dog and always a story to tell. Sometimes the mail, too, if you’re lucky and live in a place where Queen’s Post won’t go. If you’re kind, maybe they’ll sell you a rose that never wilts or a clock that chimes with the sound of faerie laughter. Or maybe they’re just antisocial peddlers. You never know, right? <b>本能</b>: To create</p>
-<ul><li>Offer an oddity at a price</li>
-<li>Spin tales of great danger and reward in far-off lands</li></ul>
+<p class="MonsterDescription">
+	為君王所愛，卻從未被信任。神秘，隱密而迷人，如果你問平民百姓的看法，間諜的人生總充斥著浪漫與陰謀。他們是黑暗中的利刃、也是一雙警惕的銳眼。間諜可能會化身成你最好的朋友、你的愛人、或你每天在市場上看到的那個老頭。沒有人知道。喔見鬼，說不定你就是個間諜－－他們說有種魔法可以在人們不知情的情況下改變他們的思想，我們怎麼能相信你？ <b>本能</b>: 滲透潛入</p>
+<ul>
+	<li>回報真相</li>
+	<li>矇騙並出賣同伴</li>
+</ul>
+<h3 class="MonsterName">流浪修補匠 (Tinkerer)	</h3>
+<p class="MonsterDescription">傳說如果你在路邊看到一名修補匠，而你沒有請他喝一大口啤酒或一些食物，那麼他將會在你身上留下一個招來厄運的詛咒。修補匠是個有趣的傢伙。這些怪人經常拖著他們那裝滿怪東西的貨車，跟著心愛的笨驢一起遊歷於城鎮與城鎮間的長道。帶著邋遢的賴皮狗，修補匠總有能夠講述的故事，有時，如果你夠幸運，他甚至會將信件送到你那女王郵政無法送達的居所。若你心地善良，也許他們會賣給你一朵永不凋零的玫瑰或會發出仙精歡笑的時鐘。或者，也許他們只不過是名不合群的小販，誰知道呢，是吧？ <b>本能</b>: 創造</p>
+<ul>
+	<li>兜售一個古怪玩意兒</li>
+	<li>編造關於巨大危險和遙遠國度財寶的故事傳說</li>
+</ul>
 
 
           </div>
@@ -267,13 +305,12 @@
         current.html(tags_arr.map(function(tag){
             var className = "";
             tag = tag.trim();
-            console.log(tag);
             if(isRangeTag(tag))         className = "red";
             if(isSizeTag(tag))          className = "green";
             if(isOrganizationTag(tag))  className = "blue";
             if(isSpellLevelTag(tag))    className = "purple";
             return `<tag class="${className}">${tag}</tag>`;
-          }).join(""));
+          }).join(" "));
       });
 
       function isSpellLevelTag(tag){
