--- a/monsters/hordes/index.html
+++ b/monsters/hordes/index.html
@@ -182,7 +182,7 @@
 <p class="MonsterDescription">“Before you set out across the hordeland, brave sir, hark a moment to the tale of Sir Regnus. Regnus was like you, sir—a paladin of the Order, all a-shine in his plated armor and with a shield as tall as a man. Proud he was of it, too—Mirrorshield, he called himself. Tale goes that he’d set his eyes on rescuing some lost priest, a kidnap from the abbey on the borders. Regnus came across some orcs in his travels, a dozen or so, and thought, as one might, that they’d be no match. Battle was joined and all was well until one of them orcs emerged from the fray with a hammer bigger than any man ought to be able to wield. Built more like an ogre or a troll, they say it was, and with a single swing, it crushed Regnus to the ground, shield and all. It were no ordinary orc, they say. It were a breaker. They can’t make plate of their own, see, so maybe it’s jealousy drives these burly things to crush and shatter the way they do. Effective tactic, though. Careful out there.” <em>Instinct</em>: To smash</p>
 <ul><li>Destroy armor or protection</li>
 <li>Lay low the mighty</li></ul>
-<p class="MonsterName">Orc One-Eye	<span class="Tags">Group, Divine, Magical, Intelligent, Organized</span></p>
+<h3 class="MonsterName">Orc One-Eye	<span class="Tags">Group, Divine, Magical, Intelligent, Organized</span></h3>
 <p class="MonsterStats">Inflict Wounds (d8+2 damage ignores armor), 6 HP, 0 Armor</p>
 <p class="MonsterStats"><span class="Tags">Close, Reach, Near, Far</span></p>
 <p class="MonsterQualities"><strong>Special Qualities:</strong> One eye</p>
@@ -237,7 +237,7 @@
 <ul><li>Cast a spell of water and destruction</li>
 <li>Command beasts of the sea</li>
 <li>Reveal divine proclamation</li></ul>
-<p class="MonsterName">Triton Sub-Mariner	<span class="Tags">Group, Organized, Intelligent</span></p>
+<h3 class="MonsterName">Triton Sub-Mariner	<span class="Tags">Group, Organized, Intelligent</span></h3>
 <p class="MonsterStats">Harpoon (b[2d8] damage), 6 HP, 3 Armor</p>
 <p class="MonsterStats"><span class="Tags">Close, Near, Far</span></p>
 <p class="MonsterQualities"><strong>Special Qualities:</strong> Aquatic</p>
@@ -301,13 +301,12 @@
         current.html(tags_arr.map(function(tag){
             var className = "";
             tag = tag.trim();
-            console.log(tag);
             if(isRangeTag(tag))         className = "red";
             if(isSizeTag(tag))          className = "green";
             if(isOrganizationTag(tag))  className = "blue";
             if(isSpellLevelTag(tag))    className = "purple";
             return `<tag class="${className}">${tag}</tag>`;
-          }).join(""));
+          }).join(" "));
       });
 
       function isSpellLevelTag(tag){
